Feat/optimize kb file parse (#511)
* chore: add implement spec

* feat: WIP refactor file parse

* feat: kb add mineru parser DONE

* feat: parser support for inputbox(only desktop)

* feat: add none for mobile/web

* chore: i18n & fix memory leak

--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -111,6 +111,7 @@
   "Chatbox AI Image Quota": "حصة صور Chatbox AI",
   "Chatbox AI License": "رخصة Chatbox AI",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "يقدم Chatbox AI حلاً ذكياً وسهل الاستخدام لمساعدتك في تعزيز الإنتاجية",
+  "Chatbox AI parse failed": "فشل تحليل Chatbox AI",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "يوفر Chatbox AI كل الدعم الأساسي للنماذج المطلوب لمعالجة قاعدة المعرفة.",
   "Chatbox AI Quota": "حصة Chatbox AI",
   "Chatbox AI Standard Model Quota": "حصة Chatbox AI القياسية",
@@ -141,6 +142,7 @@
   "Click to view parsed content": "انقر لعرض المحتوى المحلل",
   "close": "إغلاق",
   "Close": "إغلاق",
+  "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "خدمة تحليل المستندات السحابية، تدعم ملفات PDF وOffice وEPUB والعديد من أنواع الملفات الأخرى. تستهلك نقاط معالجة.",
   "Code Search": "بحث في الكود",
   "Collapse": "طي",
   "Coming soon": "قريباً",
@@ -154,7 +156,10 @@
   "Confirm deletion?": "تأكيد الحذف؟",
   "Confirm to delete this custom provider?": "هل تأكد من حذف هذا المزود المخصص؟",
   "Confirm?": "تأكيد؟",
+  "Connected": "متصل",
+  "Connection failed": "فشل الاتصال",
   "Connection failed!": "فشل الاتصال!",
+  "Connection successful": "اتصال ناجح",
   "Connection successful!": "تم الاتصال بنجاح!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "فشل الاتصال بـ {{aiProvider}}. يحدث هذا عادةً بسبب تكوين غير صحيح أو مشكلات في حساب {{aiProvider}}. يرجى <buttonOpenSettings>التحقق من الإعدادات</buttonOpenSettings> والتحقق من حالة حسابك في {{aiProvider}}، أو شراء <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> لفتح جميع النماذج المتقدمة على الفور دون أي تكوين.",
   "Content": "المحتوى",
@@ -221,6 +226,8 @@
   "display": "العرض",
   "Display": "عرض",
   "Display Settings": "إعدادات العرض",
+  "Document Parser": "محلل المستندات",
+  "Document parser reset to default due to unverified MinerU token": "تم إعادة تعيين محلل المستندات إلى الإعدادات الافتراضية بسبب رمز MinerU غير المتحقق منه",
   "Documents": "المستندات",
   "Donate": "تبرع",
   "Done": "تم",
@@ -254,6 +261,7 @@
   "Ending with / ignores v1, ending with # forces use of input address": "إنهاء بـ / يتجاهل v1، وإنهاء بـ # يجبر استخدام عنوان الإدخال",
   "Enjoying Chatbox?": "تستمتع بChatbox؟",
   "Enter": "إدخال",
+  "Enter your MinerU API token": "أدخل توكن API الخاص بـ MinerU",
   "Environment Variables": "متغيرات البيئة",
   "Error Reporting": "الإبلاغ عن الأخطاء",
   "Estimated Token Usage": "الاستخدام التقديري للتوكنات",
@@ -321,6 +329,7 @@
   "Generate More Images Below": "توليد المزيد من الصور أدناه",
   "Generating summary...": "جاري إنشاء الملخص...",
   "Get API Key": "احصل على مفتاح API",
+  "Get API Token": "الحصول على رمز API",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "احصل على أفضل اتصال واستقرار مع تطبيق Chatbox للبرمجيات المكتبية. <a>قم بتحميل الآن</a>.",
   "Get Files Meta": "الحصول على بيانات وصفية للملفات",
   "Get License": "احصل على ترخيص",
@@ -390,6 +399,7 @@
   "Loading more chunks...": "جار تحميل المزيد من الأجزاء...",
   "Loading webpage...": "جارٍ تحميل الصفحة الإنترنت...",
   "Loading...": "جاري التحميل...",
+  "Local": "محلي",
   "Local (stdio)": "محلي (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "فشلت معالجة الملفات المحلية. يمكنك ترقية خطتك لاستخدام قدرات Chatbox AI المتقدمة لمعالجة الملفات.",
   "Local Mode": "وضع محلي",
@@ -423,6 +433,8 @@
   "Message Raw JSON": "رسالة JSON خام",
   "meticulous": "دقيق",
   "MIME Type": "نوع MIME",
+  "MinerU API Token": "MinerU API Token",
+  "MinerU parse failed": "فشل تحليل MinerU",
   "Minimize": "تصغير",
   "Misleading information": "معلومات مضللة",
   "Mobile devices temporarily do not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "الأجهزة المحمولة لا تدعم مؤقتًا التحليل المحلي لهذا النوع من الملفات. يُرجى استخدام الملفات النصية (txt، markdown، إلخ.) أو استخدم <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> لتحليل المستندات السحابي.",
@@ -486,6 +498,7 @@
   "OCR Text": "نص OCR",
   "OCR Text Content": "محتوى نص OCR",
   "One-click MCP servers for Chatbox AI subscribers": "خوادم MCP بنقرة واحدة لمشتركي Chatbox AI",
+  "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "يدعم فقط ملفات نصية أساسية (.txt, .md, .json, ملفات التعليمات البرمجية، إلخ.). لملفات PDF و Office، يرجى التبديل إلى Chatbox AI.",
   "Open": "فتح",
   "OpenAI API Compatible": "متوافق مع OpenAI API",
   "OpenAI Responses API Compatible": "متوافق مع API استجابات OpenAI",
@@ -495,6 +508,9 @@
   "Or become a sponsor": "أو تصبح راعياً",
   "Other concerns": "أخرى",
   "Parse Link": "تحليل الرابط",
+  "Parser": "محلل",
+  "Parser Type": "نوع المحلل",
+  "Parser used to process uploaded documents": "المحلل المستخدم لمعالجة المستندات المرفوعة",
   "Paste long text as a file": "إرفاق نص طويل كملف",
   "Pasting long text will automatically insert it as a file, keeping chats clean and reducing token usage with prompt caching.": "إرفاق نص طويل سيضيفه كملف للحفاظ على المحادثات نظيفة وتقليل استخدام الرموز باستخدام تخزين المحادثات.",
   "Pause": "إيقاف مؤقت",
@@ -508,6 +524,7 @@
   "Please describe the content you want to report (Optional)": "يرجى وصف المحتوى الذي تريد الإبلاغ عنه (اختياري)",
   "Please ensure that the Remote LM Studio Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "يرجى التأكد من أن خدمة Remote LM Studio قادرة على الاتصال عن بُعد. لمزيد من التفاصيل، راجع <a>هذا الدليل</a>.",
   "Please ensure that the Remote Ollama Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "يرجى التأكد من أن خدمة Remote Ollama قادرة على الاتصال عن بُعد. لمزيد من التفاصيل، راجع <a>هذا الدليل</a>.",
+  "Please enter an API token": "يرجى إدخال API token",
   "Please note that as a client tool, Chatbox cannot guarantee the quality of service and data privacy of the model providers. If you are looking for a stable, reliable, and privacy-protecting model service, consider <a>Chatbox AI</a>.": "يرجى ملاحظة أنه كأداة عميل، لا يمكن لـ Chatbox ضمان جودة الخدمة وخصوصية البيانات لمزودي النماذج. إذا كنت تبحث عن خدمة نموذجية مستقرة وموثوقة وتحمي الخصوصية، فكر في <a>Chatbox AI</a>.",
   "Please select a model": "الرجاء اختيار نموذج",
   "Please test before saving": "الرجاء الاختبار قبل الحفظ",
@@ -670,6 +687,7 @@
   "Terminal": "طرفية",
   "Terms of Service": "شروط الخدمة",
   "Test": "اختبار",
+  "Test Connection": "اختبار الاتصال",
   "Test failed": "فشل الاختبار",
   "Test Model": "نموذج الاختبار",
   "Test successful": "اختبار ناجح",
@@ -702,6 +720,7 @@
   "Thinking Budget only works for 3.7 or later models": "ميزانية التفكير تعمل فقط مع النماذج 3.7 أو الأحدث",
   "Thinking Effort": "جهد التفكير",
   "Thinking Effort only works for OpenAI o-series models": "جهد التفكير يعمل فقط مع نماذج OpenAI o-series",
+  "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "خدمة تحليل سحابي من طرف ثالث، تدعم ملفات PDF ومعظم ملفات Office. تتطلب رمز API.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "هذا الإجراء لا يمكن التراجع عنه. سيتم حذف جميع المستندات وتضميناتها نهائيًا.",
   "This license key has reached the activation limit": "لقد وصل مفتاح الترخيص هذا إلى حد التفعيل",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "لقد وصل مفتاح الترخيص هذا إلى حد التفعيل، <a>انقر هنا</a> لإدارة الترخيص والأجهزة لتعطيل الأجهزة القديمة.",
@@ -753,6 +772,7 @@
   "user": "المستخدم",
   "User Avatar": "صورة رمزية للمستخدم",
   "User Terms": "شروط المستخدم",
+  "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "يستخدم ميزة تحليل المستندات المدمجة، ويدعم أنواع الملفات الشائعة. استخدام مجاني، ولا يتم استهلاك نقاط حساب.",
   "version": "الإصدار",
   "Video files are not supported": "ملفات الفيديو غير مدعومة",
   "View All Copilots": "عرض جميع مساعدي الطيارين",
