--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -111,6 +111,7 @@
   "Chatbox AI Image Quota": "Chatbox AI Bildkontingent",
   "Chatbox AI License": "Chatbox AI-Lizenz",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "Chatbox AI bietet eine benutzerfreundliche KI-Lösung, die Ihnen hilft, die Produktivität zu steigern",
+  "Chatbox AI parse failed": "Chatbox AI-Parsen fehlgeschlagen",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "Chatbox AI bietet die gesamte wesentliche Modellunterstützung, die für die Wissensdatenbankverarbeitung erforderlich ist",
   "Chatbox AI Quota": "Chatbox AI Kontingent",
   "Chatbox AI Standard Model Quota": "Chatbox AI Standardmodellkontingent",
@@ -141,6 +142,7 @@
   "Click to view parsed content": "Klicken, um den geparsten Inhalt anzuzeigen",
   "close": "Schließen",
   "Close": "Schließen",
+  "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Cloud-basierter Dokumenten-Parsing-Dienst, unterstützt PDF-, Office-Dateien, EPUB und viele andere Dateitypen. Verbraucht Rechenpunkte.",
   "Code Search": "Code-Suche",
   "Collapse": "Reduzieren",
   "Coming soon": "Demnächst",
@@ -154,7 +156,10 @@
   "Confirm deletion?": "Löschen bestätigen?",
   "Confirm to delete this custom provider?": "Überprüfen Sie das Löschen dieses benutzerdefinierten Anbieters?",
   "Confirm?": "Bestätigen?",
+  "Connected": "Verbunden",
+  "Connection failed": "Verbindung fehlgeschlagen",
   "Connection failed!": "Verbindung fehlgeschlagen!",
+  "Connection successful": "Verbindung erfolgreich",
   "Connection successful!": "Verbindung erfolgreich!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Verbindung zu {{aiProvider}} fehlgeschlagen. Dies tritt in der Regel aufgrund einer falschen Konfiguration oder {{aiProvider}}-Kontoprobleme auf. Bitte <buttonOpenSettings>überprüfen Sie Ihre Einstellungen</buttonOpenSettings> und überprüfen Sie den Status Ihres {{aiProvider}}-Kontos oder kaufen Sie eine <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>, um sofort alle erweiterten Modelle ohne Konfiguration freizuschalten.",
   "Content": "Inhalt",
@@ -221,6 +226,8 @@
   "display": "Anzeige",
   "Display": "Anzeigen",
   "Display Settings": "Anzeigeeinstellungen",
+  "Document Parser": "Dokumenten-Parser",
+  "Document parser reset to default due to unverified MinerU token": "Dokument-Parser wurde aufgrund eines nicht verifizierten MinerU-Tokens auf Standard zurückgesetzt",
   "Documents": "Dokumente",
   "Donate": "Spenden",
   "Done": "Fertig",
@@ -254,6 +261,7 @@
   "Ending with / ignores v1, ending with # forces use of input address": "Ein / am Ende ignoriert v1, ein # am Ende zwingt die Verwendung der Eingabeadresse",
   "Enjoying Chatbox?": "Genießen Sie Chatbox?",
   "Enter": "Eingabe",
+  "Enter your MinerU API token": "Geben Sie Ihren MinerU API Token ein",
   "Environment Variables": "Umgebungsvariablen",
   "Error Reporting": "Fehlerberichterstattung",
   "Estimated Token Usage": "Geschätzte Token-Nutzung",
@@ -321,6 +329,7 @@
   "Generate More Images Below": "Generieren Sie weitere Bilder unten",
   "Generating summary...": "Zusammenfassung wird erstellt...",
   "Get API Key": "API-Schlüssel erhalten",
+  "Get API Token": "API-Token abrufen",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Erhalten Sie bessere Verbindung und Stabilität mit der Chatbox-Desktop-Anwendung. <a>Jetzt herunterladen</a>.",
   "Get Files Meta": "Dateimetadaten abrufen",
   "Get License": "Lizenz erhalten",
@@ -390,6 +399,7 @@
   "Loading more chunks...": "Lädt weitere Blöcke...",
   "Loading webpage...": "Webseite wird geladen...",
   "Loading...": "Wird geladen...",
+  "Local": "Lokal",
   "Local (stdio)": "Lokal (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Lokale Dateiverarbeitung fehlgeschlagen. Sie können Ihr Abonnement aktualisieren, um die erweiterten Dateiverarbeitungsfunktionen von Chatbox AI zu nutzen.",
   "Local Mode": "Lokaler Modus",
@@ -423,6 +433,8 @@
   "Message Raw JSON": "Nachrichten-Roh-JSON",
   "meticulous": "Gründlich",
   "MIME Type": "MIME-Typ",
+  "MinerU API Token": "MinerU API Token",
+  "MinerU parse failed": "MinerU Parsen fehlgeschlagen",
   "Minimize": "Minimieren",
   "Misleading information": "Irreführende Informationen",
   "Mobile devices temporarily do not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "Mobile Geräte unterstützen vorübergehend kein lokales Parsen dieses Dateityps. Bitte verwenden Sie Textdateien (txt, Markdown usw.) oder nutzen Sie <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> für die cloudbasierte Dokumentenanalyse.",
@@ -486,6 +498,7 @@
   "OCR Text": "OCR-Text",
   "OCR Text Content": "OCR Textinhalt",
   "One-click MCP servers for Chatbox AI subscribers": "Ein-Klick MCP-Server für Chatbox AI-Abonnenten",
+  "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "Unterstützt nur einfache Textdateien (.txt, .md, .json, Codedateien usw.). Für PDF- und Office-Dateien wechseln Sie bitte zu Chatbox AI.",
   "Open": "Öffnen",
   "OpenAI API Compatible": "OpenAI-API-kompatibel",
   "OpenAI Responses API Compatible": "OpenAI Antworten API Kompatibel",
@@ -495,6 +508,9 @@
   "Or become a sponsor": "Oder werden Sie Sponsor",
   "Other concerns": "Andere Bedenken",
   "Parse Link": "Link analysieren",
+  "Parser": "Parser",
+  "Parser Type": "Parser-Typ",
+  "Parser used to process uploaded documents": "Parser zum Verarbeiten hochgeladener Dokumente",
   "Paste long text as a file": "Langen Text als Datei einfügen",
   "Pasting long text will automatically insert it as a file, keeping chats clean and reducing token usage with prompt caching.": "Langen Text als Datei einfügen, um die Chats sauber zu halten und den Token-Verbrauch mit Prompt-Caching zu reduzieren.",
   "Pause": "Pause",
@@ -508,6 +524,7 @@
   "Please describe the content you want to report (Optional)": "Bitte beschreiben Sie den Inhalt, den Sie melden möchten (optional)",
   "Please ensure that the Remote LM Studio Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Bitte stellen Sie sicher, dass der Remote LMStudio-Dienst eine Remoteverbindung herstellen kann. Weitere Informationen finden Sie in <a>diesem Tutorial</a>.",
   "Please ensure that the Remote Ollama Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Bitte stellen Sie sicher, dass der Remote Ollama Service eine Remoteverbindung herstellen kann. Weitere Informationen finden Sie in <a>diesem Tutorial</a>.",
+  "Please enter an API token": "Bitte geben Sie einen API-Token ein",
   "Please note that as a client tool, Chatbox cannot guarantee the quality of service and data privacy of the model providers. If you are looking for a stable, reliable, and privacy-protecting model service, consider <a>Chatbox AI</a>.": "Bitte beachten Sie, dass Chatbox als Client-Tool die Servicequalität und den Datenschutz der Modellanbieter nicht garantieren kann. Wenn Sie einen stabilen, zuverlässigen und datenschutzfreundlichen Modellservice suchen, sollten Sie <a>Chatbox AI</a> in Betracht ziehen.",
   "Please select a model": "Bitte wählen Sie ein Modell",
   "Please test before saving": "Bitte vor dem Speichern testen",
@@ -671,6 +688,7 @@
   "Terminal": "Terminal",
   "Terms of Service": "AGB",
   "Test": "Test",
+  "Test Connection": "Verbindung testen",
   "Test failed": "Test fehlgeschlagen",
   "Test Model": "Testmodell",
   "Test successful": "Test erfolgreich",
@@ -703,6 +721,7 @@
   "Thinking Budget only works for 3.7 or later models": "Denkbudget funktioniert nur mit Modellen ab Version 3.7",
   "Thinking Effort": "Denkaufwand",
   "Thinking Effort only works for OpenAI o-series models": "Thinking Effort funktioniert nur für OpenAI o-series models",
+  "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Drittanbieter-Cloud-Parsingdienst, unterstützt PDF und die meisten Office-Dateien. Benötigt API-Token.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Diese Aktion kann nicht rückgängig gemacht werden. Alle Dokumente und ihre Embeddings werden dauerhaft gelöscht.",
   "This license key has reached the activation limit": "Dieser Lizenzschlüssel hat das Aktivierungslimit erreicht",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Dieser Lizenzschlüssel hat das Aktivierungslimit erreicht, <a>klicken Sie hier</a>, um die Lizenz und Geräte zu verwalten, um alte Geräte zu deaktivieren.",
@@ -754,6 +773,7 @@
   "user": "Benutzer",
   "User Avatar": "Benutzer-Avatar",
   "User Terms": "Nutzungsbedingungen",
+  "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Verwendet die integrierte Dokumenten-Parsing-Funktion, unterstützt gängige Dateitypen. Kostenlose Nutzung, es werden keine Rechenpunkte verbraucht.",
   "version": "Version",
   "Video files are not supported": "Videodateien werden nicht unterstützt",
   "View All Copilots": "Alle Co-Piloten anzeigen",
