--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -88,6 +88,7 @@
   "Chatbox AI Image Quota": "Chatbox AI Image Quota",
   "Chatbox AI License": "Chatbox AI License",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "Chatbox AI offers a user-friendly AI solution to help you enhance productivity",
+  "Chatbox AI parse failed": "Chatbox AI parse failed",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "Chatbox AI provides all the essential model support required for knowledge base processing",
   "Chatbox AI Quota": "Chatbox AI Quota",
   "Chatbox AI Standard Model Quota": "Chatbox AI Standard Model Quota",
@@ -115,6 +116,7 @@
   "Click to view parsed content": "Click to view parsed content",
   "close": "close",
   "Close": "close",
+  "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.",
   "Code Search": "Code Search",
   "Collapse": "Collapse",
   "Command": "Command",
@@ -126,7 +128,10 @@
   "Confirm": "Confirm",
   "Confirm to delete this custom provider?": "Confirm to delete this custom provider?",
   "Confirm?": "Confirm?",
+  "Connected": "Connected",
+  "Connection failed": "Connection failed",
   "Connection failed!": "Connection failed!",
+  "Connection successful": "Connection successful",
   "Connection successful!": "Connection successful!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.",
   "Content": "Content",
@@ -185,6 +190,8 @@
   "Disabled": "Disabled",
   "Display": "Display",
   "Display Settings": "Display Settings",
+  "Document Parser": "Document Parser",
+  "Document parser reset to default due to unverified MinerU token": "Document parser reset to default due to unverified MinerU token",
   "Documents": "Documents",
   "Done": "Done",
   "Drag and drop files here, or click to browse": "Drag and drop files here, or click to browse",
@@ -208,6 +215,7 @@
   "Embedding Model": "Embedding Model",
   "Enable optional anonymous reporting of crash and event data": "Enable optional anonymous reporting of crash and event data",
   "Enjoying Chatbox?": "Enjoying Chatbox?",
+  "Enter your MinerU API token": "Enter your MinerU API token",
   "Environment Variables": "Environment Variables",
   "Error Reporting": "Error Reporting",
   "Estimated Token Usage": "Estimated Token Usage",
@@ -270,6 +278,7 @@
   "Generate More Images Below": "Generate More Images Below",
   "Generating summary...": "Generating summary...",
   "Get API Key": "Get API Key",
+  "Get API Token": "Get API Token",
   "Get Files Meta": "Get Files Meta",
   "Get License": "Get License",
   "get more": "get more",
@@ -333,6 +342,7 @@
   "Loading more chunks...": "Loading more chunks...",
   "Loading webpage...": "Loading webpage...",
   "Loading...": "Loading...",
+  "Local": "Local",
   "Local (stdio)": "Local (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.",
   "Local Mode": "Local Mode",
@@ -362,6 +372,8 @@
   "Mermaid Diagrams & Charts Rendering": "Mermaid Diagrams & Charts Rendering",
   "Message Raw JSON": "Message Raw JSON",
   "MIME Type": "MIME Type",
+  "MinerU API Token": "MinerU API Token",
+  "MinerU parse failed": "MinerU parse failed",
   "Minimize": "Minimize",
   "Misleading information": "Misleading information",
   "Model": "Model",
@@ -421,6 +433,7 @@
   "OCR Text": "OCR Text",
   "OCR Text Content": "OCR Text Content",
   "One-click MCP servers for Chatbox AI subscribers": "One-click MCP servers for Chatbox AI subscribers",
+  "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.",
   "Open": "Open",
   "openai": "Classic API calling method, better compatibility, suitable for most GPT models",
   "OpenAI (Responses API)": "OpenAI (Responses API)",
@@ -433,6 +446,9 @@
   "or": "or",
   "Other concerns": "Other concerns",
   "Parse Link": "Parse Link",
+  "Parser": "Parser",
+  "Parser Type": "Parser Type",
+  "Parser used to process uploaded documents": "Parser used to process uploaded documents",
   "Paste long text as a file": "Paste long text as a file",
   "Pasting long text will automatically insert it as a file, keeping chats clean and reducing token usage with prompt caching.": "Pasting long text will automatically insert it as a file, keeping chats clean and reducing token usage with prompt caching.",
   "Pause": "Pause",
@@ -444,6 +460,7 @@
   "Please click the link below to complete login:": "Please click the link below to complete login:",
   "Please complete login in your browser. If you are not redirected, please click the link below:": "Please complete login in your browser. If you are not redirected, please click the link below:",
   "Please describe the content you want to report (Optional)": "Please describe the content you want to report (Optional)",
+  "Please enter an API token": "Please enter an API token",
   "Please select a model": "Please select a model",
   "Please test before saving": "Please test before saving",
   "Preview": "Preview",
@@ -584,6 +601,7 @@
   "Terminal": "Terminal",
   "Terms of Service": "Terms of Service",
   "Test": "Test",
+  "Test Connection": "Test Connection",
   "Test failed": "Test failed",
   "Test Model": "Test Model",
   "Test Results": "Test Results",
@@ -602,6 +620,7 @@
   "Thinking Budget only works for 3.7 or later models": "Thinking Budget only works for 3.7 or later models",
   "Thinking Effort": "Thinking Effort",
   "Thinking Effort only works for OpenAI o-series models": "Thinking Effort only works for OpenAI o-series models",
+  "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "This action cannot be undone. All documents and their embeddings will be permanently deleted.",
   "This license key has reached the activation limit": "This license key has reached the activation limit",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.",
@@ -647,6 +666,7 @@
   "Used to preprocess image files, requires models with vision capabilities enabled": "Used to preprocess image files, requires models with vision capabilities enabled",
   "User Avatar": "User Avatar",
   "User Terms": "User Terms",
+  "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.",
   "Video files are not supported": "Video files are not supported",
   "View All Copilots": "View All Copilots",
   "View Details": "View Details",
