--- a/src/renderer/i18n/locales/es/translation.json
+++ b/src/renderer/i18n/locales/es/translation.json
@@ -111,6 +111,7 @@
   "Chatbox AI Image Quota": "Cuota de imágenes de Chatbox AI",
   "Chatbox AI License": "Licencia de Chatbox AI",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "Chatbox AI ofrece una solución de IA fácil de usar para ayudarte a mejorar la productividad",
+  "Chatbox AI parse failed": "Chatbox AI falló el análisis",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "Chatbox AI proporciona todo el soporte esencial de modelos necesario para el procesamiento de bases de conocimiento",
   "Chatbox AI Quota": "Chatbox AI Cuota",
   "Chatbox AI Standard Model Quota": "Cuota del modelo estándar de Chatbox AI",
@@ -141,6 +142,7 @@
   "Click to view parsed content": "Clic para ver contenido analizado",
   "close": "Cerrar",
   "Close": "Cerrar",
+  "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Servicio de análisis de documentos basado en la nube, compatible con archivos PDF, de Office, EPUB y muchos otros tipos de archivo. Consume puntos de cómputo.",
   "Code Search": "Búsqueda de Código",
   "Collapse": "Contraer",
   "Coming soon": "Próximamente",
@@ -154,7 +156,10 @@
   "Confirm deletion?": "Confirmar eliminación?",
   "Confirm to delete this custom provider?": "¿Confirmar la eliminación de este proveedor personalizado?",
   "Confirm?": "Confirmar?",
+  "Connected": "Conectado",
+  "Connection failed": "Conexión fallida",
   "Connection failed!": "¡Conexión fallida!",
+  "Connection successful": "Conexión exitosa",
   "Connection successful!": "¡Conexión exitosa!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "La conexión a {{aiProvider}} falló. Esto suele ocurrir debido a una configuración incorrecta o problemas de cuenta de {{aiProvider}}. Por favor, <buttonOpenSettings>verifique sus ajustes</buttonOpenSettings> y verifique el estado de su cuenta de {{aiProvider}}, o compre una <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> para desbloquear todos los modelos avanzados al instante sin necesidad de configuración.",
   "Content": "Contenido",
@@ -221,6 +226,8 @@
   "display": "mostrar",
   "Display": "Mostrar",
   "Display Settings": "Ajustes de visualización",
+  "Document Parser": "Analizador de documentos",
+  "Document parser reset to default due to unverified MinerU token": "Analizador de documentos restablecido a los valores predeterminados debido a un token de MinerU no verificado",
   "Documents": "Documentos",
   "Donate": "Donar",
   "Done": "Hecho",
@@ -254,6 +261,7 @@
   "Ending with / ignores v1, ending with # forces use of input address": "Finalizar con / ignora v1, finalizar con # obliga a usar la dirección de entrada",
   "Enjoying Chatbox?": "¿Te gusta Chatbox?",
   "Enter": "Intro",
+  "Enter your MinerU API token": "Introduce tu token de API de MinerU",
   "Environment Variables": "Variables de Entorno",
   "Error Reporting": "Informe de errores",
   "Estimated Token Usage": "Uso estimado de tokens",
@@ -321,6 +329,7 @@
   "Generate More Images Below": "Generar más imágenes abajo",
   "Generating summary...": "Generando resumen...",
   "Get API Key": "Obtener clave API",
+  "Get API Token": "Obtener API Token",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Obtenez une meilleure connectivité et une stabilité avec l'application Chatbox pour bureau. <a>Télécharger maintenant</a>.",
   "Get Files Meta": "Obtener Metadatos de Archivos",
   "Get License": "Obtener licencia",
@@ -390,6 +399,7 @@
   "Loading more chunks...": "Cargando más fragmentos...",
   "Loading webpage...": "Cargando página web...",
   "Loading...": "Cargando...",
+  "Local": "Local",
   "Local (stdio)": "Local (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Error en el procesamiento de archivos locales. Puedes actualizar tu plan para usar las capacidades avanzadas de procesamiento de archivos de Chatbox AI.",
   "Local Mode": "Modo local",
@@ -423,6 +433,8 @@
   "Message Raw JSON": "Mensaje JSON sin procesar",
   "meticulous": "Meticuloso",
   "MIME Type": "Tipo MIME",
+  "MinerU API Token": "Token de API de MinerU",
+  "MinerU parse failed": "MinerU falló el análisis",
   "Minimize": "Minimizar",
   "Misleading information": "Información engañosa",
   "Mobile devices temporarily do not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "Los dispositivos móviles temporalmente no admiten el análisis local de este tipo de archivo. Utilice archivos de texto (txt, markdown, etc.) o utilice <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> para el análisis de documentos basado en la nube.",
@@ -486,6 +498,7 @@
   "OCR Text": "Texto OCR",
   "OCR Text Content": "Contenido de Texto OCR",
   "One-click MCP servers for Chatbox AI subscribers": "Servidores MCP de un solo clic para suscriptores de Chatbox AI",
+  "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "Solo admite archivos de texto básicos (.txt, .md, .json, archivos de código, etc.). Para archivos PDF y de Office, cambie a Chatbox AI.",
   "Open": "Abrir",
   "OpenAI API Compatible": "Compatible con API de OpenAI",
   "OpenAI Responses API Compatible": "Compatible con la API de respuestas de OpenAI",
@@ -495,6 +508,9 @@
   "Or become a sponsor": "O conviértete en patrocinador",
   "Other concerns": "Otros problemas",
   "Parse Link": "Analizar enlace",
+  "Parser": "Analizador",
+  "Parser Type": "Tipo de Parser",
+  "Parser used to process uploaded documents": "Analizador utilizado para procesar documentos cargados",
   "Paste long text as a file": "Pegar texto largo como archivo",
   "Pasting long text will automatically insert it as a file, keeping chats clean and reducing token usage with prompt caching.": "Pegar texto largo como archivo para mantener conversaciones limpias y reducir el uso de tokens con caché de prompt.",
   "Pause": "Pausar",
@@ -508,6 +524,7 @@
   "Please describe the content you want to report (Optional)": "Por favor, describe el contenido que desea reportar (opcional)",
   "Please ensure that the Remote LM Studio Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Por favor, asegúrese de que el Servicio LM Studio Remoto pueda conectarse de forma remota. Para más detalles, consulte <a>este tutorial</a>.",
   "Please ensure that the Remote Ollama Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Asegúrese de que el Servicio Remoto de Ollama pueda conectarse de forma remota. Para más detalles, consulte <a>este tutorial</a>.",
+  "Please enter an API token": "Introduce un token de API",
   "Please note that as a client tool, Chatbox cannot guarantee the quality of service and data privacy of the model providers. If you are looking for a stable, reliable, and privacy-protecting model service, consider <a>Chatbox AI</a>.": "Tenga en cuenta que, como herramienta cliente, Chatbox no puede garantizar la calidad del servicio ni la privacidad de los datos de los proveedores de modelos. Si busca un servicio de modelo estable, confiable y que proteja la privacidad, considere <a>Chatbox AI</a>.",
   "Please select a model": "Por favor, seleccione un modelo",
   "Please test before saving": "Por favor, pruebe antes de guardar",
@@ -670,6 +687,7 @@
   "Terminal": "Terminal",
   "Terms of Service": "Términos de Servicio",
   "Test": "Prueba",
+  "Test Connection": "Probar conexión",
   "Test failed": "Prueba fallida",
   "Test Model": "Modelo de prueba",
   "Test successful": "Prueba exitosa",
@@ -702,6 +720,7 @@
   "Thinking Budget only works for 3.7 or later models": "Presupuesto de pensamiento solo funciona con modelos 3.7 o posteriores",
   "Thinking Effort": "Esfuerzo de pensamiento",
   "Thinking Effort only works for OpenAI o-series models": "Esfuerzo de Pensamiento solo funciona para modelos OpenAI de la serie o",
+  "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Servicio de análisis en la nube de terceros, compatible con PDF y la mayoría de los archivos de Office. Requiere un token de API.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Esta acción no se puede deshacer. Todos los documentos y sus incrustaciones se eliminarán permanentemente.",
   "This license key has reached the activation limit": "Esta clave de licencia ha alcanzado el límite de activación",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Esta clave de licencia ha alcanzado el límite de activación, <a>haga clic aquí</a> para gestionar la licencia y los dispositivos para desactivar dispositivos antiguos.",
@@ -753,6 +772,7 @@
   "user": "Usuario",
   "User Avatar": "Avatar del usuario",
   "User Terms": "Términos del usuario",
+  "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Utiliza la función de análisis de documentos incorporada, admite tipos de archivo comunes. Uso gratuito, no se consumirán puntos de cómputo.",
   "version": "Versión",
   "Video files are not supported": "Los archivos de vídeo no son compatibles",
   "View All Copilots": "Ver todos los copilotos",
