--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -110,6 +110,7 @@
   "Chatbox AI Image Quota": "Quota immagini Chatbox AI",
   "Chatbox AI License": "Licenza Chatbox AI",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "Chatbox AI offre una soluzione AI user-friendly per aiutarti a migliorare la produttività",
+  "Chatbox AI parse failed": "Chatbox AI analisi fallita",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "Chatbox AI fornisce tutto il supporto essenziale del modello richiesto per l'elaborazione della base di conoscenza",
   "Chatbox AI Quota": "Quota Chatbox AI",
   "Chatbox AI Standard Model Quota": "Quota del modello standard Chatbox AI",
@@ -140,6 +141,7 @@
   "Click to view parsed content": "Clicca per visualizzare il contenuto analizzato",
   "close": "Chiudi",
   "Close": "Chiudi",
+  "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Servizio di analisi documenti basato su cloud, supporta PDF, file Office, EPUB e molti altri tipi di file. Consuma punti di calcolo.",
   "Code Search": "Ricerca codice",
   "Collapse": "Comprimi",
   "Coming soon": "Prossimamente",
@@ -153,7 +155,10 @@
   "Confirm deletion?": "Confermare la cancellazione?",
   "Confirm to delete this custom provider?": "Confermi di voler eliminare questo fornitore personalizzato?",
   "Confirm?": "Conferma?",
+  "Connected": "Connesso",
+  "Connection failed": "Connessione fallita",
   "Connection failed!": "Connessione fallita!",
+  "Connection successful": "Connessione riuscita",
   "Connection successful!": "Connessione riuscita!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Connessione a {{aiProvider}} fallita. Questo si verifica tipicamente a causa di una configurazione errata o problemi con l'account {{aiProvider}}. Per favore, <buttonOpenSettings>controlla le tue impostazioni</buttonOpenSettings> e verifica lo stato del tuo account {{aiProvider}}, o acquista una <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> per sbloccare tutti i modelli avanzati istantaneamente senza alcuna configurazione.",
   "Content": "Contenuto",
@@ -220,6 +225,8 @@
   "display": "visualizza",
   "Display": "Visualizza",
   "Display Settings": "Impostazioni di visualizzazione",
+  "Document Parser": "Parser documenti",
+  "Document parser reset to default due to unverified MinerU token": "Analizzatore di documenti ripristinato alle impostazioni predefinite a causa del token MinerU non verificato",
   "Documents": "Documenti",
   "Donate": "Dona",
   "Done": "Fatto",
@@ -253,6 +260,7 @@
   "Ending with / ignores v1, ending with # forces use of input address": "Terminare con / ignora v1, terminare con # costringe all'uso dell'indirizzo di input",
   "Enjoying Chatbox?": "Stai godendo di Chatbox?",
   "Enter": "Invio",
+  "Enter your MinerU API token": "Inserisci il tuo MinerU API token",
   "Environment Variables": "Variabili d'ambiente",
   "Error Reporting": "Segnalazione errori",
   "Estimated Token Usage": "Utilizzo Stimato dei Token",
@@ -320,6 +328,7 @@
   "Generate More Images Below": "Genera altre immagini sotto",
   "Generating summary...": "Generazione riassunto...",
   "Get API Key": "Ottieni chiave API",
+  "Get API Token": "Ottieni Token API",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Ottieni una migliore connettività e stabilità con l'applicazione Chatbox per desktop. <a>Scarica ora</a>.",
   "Get Files Meta": "Ottieni Metadati File",
   "Get License": "Ottieni licenza",
@@ -389,6 +398,7 @@
   "Loading more chunks...": "Caricamento di altri blocchi...",
   "Loading webpage...": "Caricamento pagina web...",
   "Loading...": "Caricamento...",
+  "Local": "Locale",
   "Local (stdio)": "Locale (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Elaborazione del file locale non riuscita. Puoi aggiornare il tuo piano per utilizzare le funzionalità avanzate di elaborazione file di Chatbox AI.",
   "Local Mode": "Modalità locale",
@@ -422,6 +432,8 @@
   "Message Raw JSON": "Messaggio JSON non elaborato",
   "meticulous": "Meticoloso",
   "MIME Type": "Tipo MIME",
+  "MinerU API Token": "Token API MinerU",
+  "MinerU parse failed": "MinerU analisi non riuscita",
   "Minimize": "Minimizza",
   "Misleading information": "Informazioni ingannevoli",
   "Mobile devices temporarily do not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "I dispositivi mobili non supportano temporaneamente l'analisi locale di questo tipo di file. Si prega di utilizzare file di testo (txt, markdown, ecc.) o di usare <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> per l'analisi di documenti basata su cloud.",
@@ -485,6 +497,7 @@
   "OCR Text": "Testo OCR",
   "OCR Text Content": "Contenuto testuale OCR",
   "One-click MCP servers for Chatbox AI subscribers": "Server MCP a un clic per gli abbonati a Chatbox AI",
+  "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "Supporta solo file di testo di base (.txt, .md, .json, file di codice, ecc.). Per i file PDF e Office, passa a Chatbox AI.",
   "Open": "Apri",
   "OpenAI API Compatible": "Compatibile con API OpenAI",
   "OpenAI Responses API Compatible": "OpenAI Risposte API Compatibile",
@@ -494,6 +507,9 @@
   "Or become a sponsor": "O diventa uno sponsor",
   "Other concerns": "Altri problemi",
   "Parse Link": "Analizza Collegamento",
+  "Parser": "Parser",
+  "Parser Type": "Tipo di Parser",
+  "Parser used to process uploaded documents": "Parser utilizzato per elaborare i documenti caricati",
   "Paste long text as a file": "Incolla testo lungo come file",
   "Pasting long text will automatically insert it as a file, keeping chats clean and reducing token usage with prompt caching.": "Incolla testo lungo come file per mantenere le conversazioni pulite e ridurre l'utilizzo dei token con il caching dei prompt.",
   "Pause": "Pausa",
@@ -507,6 +523,7 @@
   "Please describe the content you want to report (Optional)": "Per favore, descrivi il contenuto che desideri segnalare (opzionale)",
   "Please ensure that the Remote LM Studio Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Si prega di assicurarsi che il Servizio LM Studio Remoto possa connettersi in remoto. Per maggiori dettagli, consulta <a>questo tutorial</a>.",
   "Please ensure that the Remote Ollama Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Assicurati che il Servizio Ollama Remoto sia in grado di connettersi da remoto. Per maggiori dettagli, consulta <a>questo tutorial</a>.",
+  "Please enter an API token": "Inserisci un token API",
   "Please note that as a client tool, Chatbox cannot guarantee the quality of service and data privacy of the model providers. If you are looking for a stable, reliable, and privacy-protecting model service, consider <a>Chatbox AI</a>.": "Si prega di notare che, in quanto strumento client, Chatbox non può garantire la qualità del servizio e la privacy dei dati dei fornitori di modelli. Se stai cercando un servizio di modelli stabile, affidabile e che protegga la privacy, considera <a>Chatbox AI</a>.",
   "Please select a model": "Si prega di selezionare un modello",
   "Please test before saving": "Si prega di testare prima di salvare",
@@ -669,6 +686,7 @@
   "Terminal": "Terminale",
   "Terms of Service": "Termini di servizio",
   "Test": "Test",
+  "Test Connection": "Verifica connessione",
   "Test failed": "Test fallito",
   "Test Model": "Modello di Test",
   "Test successful": "Test riuscito",
@@ -701,6 +719,7 @@
   "Thinking Budget only works for 3.7 or later models": "Budget di Pensiero funziona solo per modelli 3.7 o successivi",
   "Thinking Effort": "Sforzo di Pensiero",
   "Thinking Effort only works for OpenAI o-series models": "Lo Sforzo di Pensiero funziona solo per i modelli OpenAI della serie o",
+  "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Servizio di parsing cloud di terze parti, supporta PDF e la maggior parte dei file Office. Richiede un token API.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Questa azione non può essere annullata. Tutti i documenti e i loro embedding verranno eliminati definitivamente.",
   "This license key has reached the activation limit": "Questa chiave di licenza ha raggiunto il limite di attivazione",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Questa chiave di licenza ha raggiunto il limite di attivazione, <a>clicca qui</a> per gestire la licenza e i dispositivi per disattivare i vecchi dispositivi.",
@@ -751,6 +770,7 @@
   "user": "Utente",
   "User Avatar": "Avatar utente",
   "User Terms": "Termini dell'utente",
+  "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Utilizza la funzione integrata di analisi dei documenti, supporta i tipi di file comuni. Utilizzo gratuito, non verranno consumati punti di calcolo.",
   "version": "Versione",
   "Video files are not supported": "File video non supportati",
   "View All Copilots": "Visualizza tutti i Copilot",
