--- a/src/renderer/i18n/locales/ja/translation.json
+++ b/src/renderer/i18n/locales/ja/translation.json
@@ -111,6 +111,7 @@
   "Chatbox AI Image Quota": "Chatbox AI 画像クオータ",
   "Chatbox AI License": "Chatbox AIライセンス",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "Chatbox AIは使いやすいAIソリューションを提供し、生産性を向上させるお手伝いをします",
+  "Chatbox AI parse failed": "Chatbox AI 解析失敗",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "Chatbox AI は、ナレッジベース処理に必要なすべてのモデルサポートを提供しています",
   "Chatbox AI Quota": "Chatbox AI クォータ",
   "Chatbox AI Standard Model Quota": "Chatbox AI 標準モデルクオータ",
@@ -141,6 +142,7 @@
   "Click to view parsed content": "クリックして解析済みコンテンツを表示",
   "close": "閉じる",
   "Close": "閉じる",
+  "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "クラウドベースのドキュメント解析サービスで、PDF、Officeファイル、EPUB、その他多くのファイル形式に対応しています。コンピューティングポイントを消費します。",
   "Code Search": "コード検索",
   "Collapse": "折りたたむ",
   "Coming soon": "近日公開",
@@ -154,7 +156,10 @@
   "Confirm deletion?": "削除を確認しますか？",
   "Confirm to delete this custom provider?": "このカスタムプロバイダーを削除してもよろしいですか？",
   "Confirm?": "確認しますか？",
+  "Connected": "接続済み",
+  "Connection failed": "接続に失敗しました",
   "Connection failed!": "接続失敗！",
+  "Connection successful": "接続に成功しました",
   "Connection successful!": "接続成功！",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "{{aiProvider}}への接続に失敗しました。これは通常、設定の誤りや{{aiProvider}}アカウントの問題によるものです。設定を確認して{{aiProvider}}アカウントのステータスを確認するか、<LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>を購入して、すべての高度なモデルを即座に設定なしでロック解除してください。",
   "Content": "コンテンツ",
@@ -221,6 +226,8 @@
   "display": "表示",
   "Display": "表示",
   "Display Settings": "表示設定",
+  "Document Parser": "ドキュメントパーサー",
+  "Document parser reset to default due to unverified MinerU token": "MinerUトークンが未検証のため、ドキュメントパーサーは初期設定に戻されました。",
   "Documents": "ドキュメント",
   "Donate": "寄付する",
   "Done": "完了",
@@ -254,6 +261,7 @@
   "Ending with / ignores v1, ending with # forces use of input address": "/で終わるとv1を無視し、#で終わると入力アドレスの使用を強制します",
   "Enjoying Chatbox?": "Chatboxをお楽しみですか？",
   "Enter": "エンター",
+  "Enter your MinerU API token": "MinerU APIトークンを入力してください",
   "Environment Variables": "環境変数",
   "Error Reporting": "エラーレポート",
   "Estimated Token Usage": "推定トークン使用量",
@@ -321,6 +329,7 @@
   "Generate More Images Below": "以下でさらに画像を生成",
   "Generating summary...": "要約を生成中...",
   "Get API Key": "API キーを取得",
+  "Get API Token": "APIトークンを取得",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Chatboxデスクトップアプリを使用して、より良い接続と安定性を得てください。<a>今すぐダウンロード</a>。",
   "Get Files Meta": "ファイルメタデータ取得",
   "Get License": "ライセンスを取得",
@@ -390,6 +399,7 @@
   "Loading more chunks...": "さらにチャンクを読み込み中...",
   "Loading webpage...": "Webページを読み込んでいます...",
   "Loading...": "読み込み中...",
+  "Local": "ローカル",
   "Local (stdio)": "ローカル (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "ローカルファイル処理に失敗しました。プランをアップグレードすることで、Chatbox AIの高度なファイル処理機能を利用できます。",
   "Local Mode": "ローカルモード",
@@ -423,6 +433,8 @@
   "Message Raw JSON": "メッセージの生JSON",
   "meticulous": "細心",
   "MIME Type": "MIMEタイプ",
+  "MinerU API Token": "MinerU APIトークン",
+  "MinerU parse failed": "MinerU の解析に失敗しました",
   "Minimize": "最小化",
   "Misleading information": "誤った情報",
   "Mobile devices temporarily do not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "モバイルデバイスは一時的にこのファイル形式のローカル解析に対応していません。テキストファイル（txt、markdownなど）をご利用いただくか、クラウドベースのドキュメント分析には<LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing>をご利用ください。",
@@ -486,6 +498,7 @@
   "OCR Text": "OCR テキスト",
   "OCR Text Content": "OCR テキストコンテンツ",
   "One-click MCP servers for Chatbox AI subscribers": "Chatbox AI登録者向けのワンクリックMCPサーバー",
+  "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "基本的なテキストファイル（.txt、.md、.json、コードファイルなど）のみをサポートしています。PDFおよびOfficeファイルの場合、Chatbox AIに切り替えてください。",
   "Open": "開く",
   "OpenAI API Compatible": "OpenAI API互換",
   "OpenAI Responses API Compatible": "OpenAI レスポンス API 対応",
@@ -495,6 +508,9 @@
   "Or become a sponsor": "またはスポンサーになる",
   "Other concerns": "その他の問題",
   "Parse Link": "リンクを解析",
+  "Parser": "パーサー",
+  "Parser Type": "パーサータイプ",
+  "Parser used to process uploaded documents": "アップロードされたドキュメントを処理するパーサー",
   "Paste long text as a file": "長文をファイルとして貼り付け",
   "Pasting long text will automatically insert it as a file, keeping chats clean and reducing token usage with prompt caching.": "長文をファイルとして貼り付けると、チャットをクリーンに保ち、プロンプトキャッシュを使用してトークン使用量を削減できます。",
   "Pause": "一時停止",
@@ -508,6 +524,7 @@
   "Please describe the content you want to report (Optional)": "報告したい内容を説明してください（オプション）",
   "Please ensure that the Remote LM Studio Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "リモートLM Studioサービスがリモート接続できることを確認してください。詳細については、<a>このチュートリアル</a>を参照してください。",
   "Please ensure that the Remote Ollama Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "リモートOllamaサービスがリモート接続できることを確認してください。詳細については、<a>このチュートリアル</a>を参照してください。",
+  "Please enter an API token": "APIトークンを入力してください",
   "Please note that as a client tool, Chatbox cannot guarantee the quality of service and data privacy of the model providers. If you are looking for a stable, reliable, and privacy-protecting model service, consider <a>Chatbox AI</a>.": "クライアントツールとして、Chatboxはモデルプロバイダーのサービス品質とデータプライバシーを保証できません。安定した、信頼性の高い、プライバシーを保護するモデルサービスをお探しの場合は、<a>Chatbox AI</a>を検討してください。",
   "Please select a model": "モデルを選択してください",
   "Please test before saving": "保存する前にテストしてください",
@@ -671,6 +688,7 @@
   "Terminal": "ターミナル",
   "Terms of Service": "利用規約",
   "Test": "テスト",
+  "Test Connection": "接続テスト",
   "Test failed": "テスト失敗",
   "Test Model": "テストモデル",
   "Test successful": "テスト成功",
@@ -703,6 +721,7 @@
   "Thinking Budget only works for 3.7 or later models": "思考予算は3.7以降のモデルにのみ対応しています",
   "Thinking Effort": "思考労力",
   "Thinking Effort only works for OpenAI o-series models": "思考努力は OpenAI o-series models にのみ対応しています",
+  "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "サードパーティのクラウド解析サービス、PDF およびほとんどの Office ファイルをサポート。API トークンが必要です。",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "この操作は元に戻せません。すべてのドキュメントとその埋め込みは完全に削除されます。",
   "This license key has reached the activation limit": "このライセンスキーは有効化制限に達しました",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "このライセンスキーは有効化制限に達しました、古いデバイスを無効化するためにライセンスとデバイスを管理するには<a>ここをクリックして</a>ください。",
@@ -754,6 +773,7 @@
   "user": "ユーザー",
   "User Avatar": "ユーザーアバター",
   "User Terms": "ユーザー規約",
+  "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "組み込みのドキュメント解析機能を使用し、一般的なファイルタイプをサポートしています。無料で利用でき、コンピュートポイントは消費されません。",
   "version": "バージョン",
   "Video files are not supported": "動画ファイルはサポートされていません",
   "View All Copilots": "すべてのコパイロットを表示",
