--- a/src/renderer/i18n/locales/ko/translation.json
+++ b/src/renderer/i18n/locales/ko/translation.json
@@ -111,6 +111,7 @@
   "Chatbox AI Image Quota": "Chatbox AI 이미지 할당량",
   "Chatbox AI License": "Chatbox AI 라이선스",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "Chatbox AI는 사용하기 쉬운 AI 솔루션을 제공하여 생산성을 향상시키는데 도움을 줍니다",
+  "Chatbox AI parse failed": "Chatbox AI 파싱 실패",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "Chatbox AI는 지식 기반 처리에 필요한 모든 필수 모델 지원을 제공합니다.",
   "Chatbox AI Quota": "Chatbox AI 할당량",
   "Chatbox AI Standard Model Quota": "Chatbox AI 표준 모델 할당량",
@@ -141,6 +142,7 @@
   "Click to view parsed content": "클릭해서 파싱된 내용 보기",
   "close": "닫기",
   "Close": "닫기",
+  "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "클라우드 기반 문서 파싱 서비스로, PDF, Office 파일, EPUB 및 다양한 기타 파일 형식을 지원합니다. 컴퓨팅 포인트를 소모합니다.",
   "Code Search": "코드 검색",
   "Collapse": "축소",
   "Coming soon": "곧 출시 예정",
@@ -154,7 +156,10 @@
   "Confirm deletion?": "삭제 확인?",
   "Confirm to delete this custom provider?": "이 사용자 정의 제공자를 삭제하시겠습니까?",
   "Confirm?": "확인?",
+  "Connected": "연결됨",
+  "Connection failed": "연결 실패",
   "Connection failed!": "연결 실패!",
+  "Connection successful": "연결 성공",
   "Connection successful!": "연결 성공!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "{{aiProvider}}에 연결하지 못했습니다. 일반적으로 잘못된 구성 또는 {{aiProvider}} 계정 문제로 발생합니다. <buttonOpenSettings>설정을 확인</buttonOpenSettings>하고 {{aiProvider}} 계정 상태를 확인하거나 <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>를 구매하여 모든 고급 모델을 즉시 구성 없이 잠금 해제하세요.",
   "Content": "콘텐츠",
@@ -221,6 +226,8 @@
   "display": "표시",
   "Display": "표시",
   "Display Settings": "디스플레이 설정",
+  "Document Parser": "문서 파서",
+  "Document parser reset to default due to unverified MinerU token": "인증되지 않은 MinerU 토큰으로 인해 문서 파서가 기본값으로 재설정되었습니다.",
   "Documents": "문서",
   "Donate": "기부",
   "Done": "완료",
@@ -254,6 +261,7 @@
   "Ending with / ignores v1, ending with # forces use of input address": "/로 끝나면 v1을 무시하고 #로 끝나면 입력 주소를 강제로 사용합니다.",
   "Enjoying Chatbox?": "Chatbox를 즐기고 있습니까?",
   "Enter": "Enter",
+  "Enter your MinerU API token": "MinerU API 토큰을 입력하세요",
   "Environment Variables": "환경 변수",
   "Error Reporting": "오류 보고",
   "Estimated Token Usage": "예상 토큰 사용량",
@@ -321,6 +329,7 @@
   "Generate More Images Below": "아래에서 더 많은 이미지 생성",
   "Generating summary...": "요약 생성 중...",
   "Get API Key": "API 키 가져오기",
+  "Get API Token": "API 토큰 가져오기",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Chatbox 데스크톱 앱을 사용하여 더 나은 연결과 안정성을 얻으세요. <a>지금 다운로드</a>.",
   "Get Files Meta": "파일 메타 가져오기",
   "Get License": "라이선스 가져오기",
@@ -390,6 +399,7 @@
   "Loading more chunks...": "더 많은 청크 로딩 중...",
   "Loading webpage...": "웹 페이지를 로드하는 중...",
   "Loading...": "불러오는 중...",
+  "Local": "로컬",
   "Local (stdio)": "로컬 (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "로컬 파일 처리에 실패했습니다. Chatbox AI의 고급 파일 처리 기능을 사용하려면 요금제를 업그레이드하세요.",
   "Local Mode": "로컬 모드",
@@ -423,6 +433,8 @@
   "Message Raw JSON": "메시지 원본 JSON",
   "meticulous": "세심한",
   "MIME Type": "MIME 유형",
+  "MinerU API Token": "MinerU API 토큰",
+  "MinerU parse failed": "MinerU 파싱 실패",
   "Minimize": "최소화",
   "Misleading information": "오해를 불러일으키는 정보",
   "Mobile devices temporarily do not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "모바일 기기에서는 이 파일 형식의 로컬 파싱을 일시적으로 지원하지 않습니다. 텍스트 파일(txt, markdown 등)을 사용하시거나, 클라우드 기반 문서 분석을 위해 <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing>를 이용해 주세요.",
@@ -486,6 +498,7 @@
   "OCR Text": "OCR 텍스트",
   "OCR Text Content": "OCR 텍스트 내용",
   "One-click MCP servers for Chatbox AI subscribers": "Chatbox AI 구독자용 원클릭 MCP 서버",
+  "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "기본 텍스트 파일(.txt, .md, .json, 코드 파일 등)만 지원합니다. PDF 및 Office 파일의 경우 Chatbox AI로 전환해주세요.",
   "Open": "열기",
   "OpenAI API Compatible": "OpenAI API 호환",
   "OpenAI Responses API Compatible": "OpenAI 응답 API 호환",
@@ -495,6 +508,9 @@
   "Or become a sponsor": "혹은 후원자가 되십시오",
   "Other concerns": "기타 걱정",
   "Parse Link": "링크 분석",
+  "Parser": "파서",
+  "Parser Type": "파서 유형",
+  "Parser used to process uploaded documents": "업로드된 문서를 처리하는 데 사용되는 파서",
   "Paste long text as a file": "긴 텍스트를 파일로 붙여넣기",
   "Pasting long text will automatically insert it as a file, keeping chats clean and reducing token usage with prompt caching.": "긴 텍스트를 붙여넣으면 파일로 삽입되어 대화를 깨끗하게 유지하고 프롬프트 캐싱을 사용하여 토큰 사용량을 줄입니다.",
   "Pause": "일시 정지",
@@ -508,6 +524,7 @@
   "Please describe the content you want to report (Optional)": "신고하려는 내용을 설명해 주세요 (선택 사항)",
   "Please ensure that the Remote LM Studio Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "원격 LM Studio 서비스가 원격으로 연결할 수 있는지 확인하십시오. 자세한 내용은 <a>이 튜토리얼</a>을 참조하십시오.",
   "Please ensure that the Remote Ollama Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "원격 Ollama 서비스가 원격으로 연결할 수 있는지 확인하십시오. 자세한 내용은 <a>이 튜토리얼</a>을 참조하십시오.",
+  "Please enter an API token": "API 토큰을 입력해주세요",
   "Please note that as a client tool, Chatbox cannot guarantee the quality of service and data privacy of the model providers. If you are looking for a stable, reliable, and privacy-protecting model service, consider <a>Chatbox AI</a>.": "클라이언트 도구로서 Chatbox는 모델 공급자의 서비스 품질과 데이터 개인 정보 보호를 보장할 수 없습니다. 안정적이고 신뢰할 수 있으며 개인 정보를 보호하는 모델 서비스를 찾고 있다면 <a>Chatbox AI</a>를 고려해 보세요.",
   "Please select a model": "모델을 선택해주세요",
   "Please test before saving": "저장하기 전에 테스트해주세요",
@@ -671,6 +688,7 @@
   "Terminal": "터미널",
   "Terms of Service": "서비스 약관",
   "Test": "테스트",
+  "Test Connection": "연결 테스트",
   "Test failed": "테스트 실패했습니다",
   "Test Model": "모델 테스트",
   "Test successful": "테스트 성공",
@@ -703,6 +721,7 @@
   "Thinking Budget only works for 3.7 or later models": "사고 예산은 3.7 이상 모델에서만 작동합니다",
   "Thinking Effort": "생각 노력",
   "Thinking Effort only works for OpenAI o-series models": "사고 노력은 OpenAI o-series 모델에서만 작동합니다",
+  "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "제3자 클라우드 파싱 서비스, PDF 및 대부분의 Office 파일을 지원합니다. API 토큰이 필요합니다.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "이 작업은 되돌릴 수 없습니다. 모든 문서와 해당 임베딩이 영구적으로 삭제됩니다.",
   "This license key has reached the activation limit": "이 라이선스 키는 활성화 제한에 도달했습니다.",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "이 라이선스 키는 활성화 제한에 도달했습니다. 이전 기기를 비활성화하려면 <a>여기를 클릭</a>하여 라이선스 및 기기를 관리하세요.",
@@ -754,6 +773,7 @@
   "user": "사용자",
   "User Avatar": "사용자 아바타",
   "User Terms": "이용약관",
+  "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "내장 문서 구문 분석 기능을 사용하며, 일반적인 파일 형식을 지원합니다. 무료 사용이며, 컴퓨팅 포인트가 소모되지 않습니다.",
   "version": "버전",
   "Video files are not supported": "동영상 파일은 지원되지 않습니다",
   "View All Copilots": "모든 동반자 보기",
