--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -111,6 +111,7 @@
   "Chatbox AI Image Quota": "Chatbox AI-bildekvote",
   "Chatbox AI License": "Chatbox AI-lisens",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "Chatbox AI tilbyr en brukervennlig KI-løsning for å hjelpe deg med å øke produktiviteten",
+  "Chatbox AI parse failed": "Chatbox AI parsing mislyktes",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "Chatbox AI tilbyr all nødvendig modellstøtte for behandling av kunnskapsbaser",
   "Chatbox AI Quota": "Chatbox AI Kvote",
   "Chatbox AI Standard Model Quota": "Chatbox AI standardmodell-kvote",
@@ -141,6 +142,7 @@
   "Click to view parsed content": "Klikk for å vise tolket innhold",
   "close": "Lukk",
   "Close": "Lukk",
+  "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Skybasert dokumentparseringstjeneste, støtter PDF, Office-filer, EPUB og mange andre filtyper. Forbruker beregningspoeng.",
   "Code Search": "Kodesøk",
   "Collapse": "Skjul",
   "Coming soon": "Kommer snart",
@@ -154,7 +156,10 @@
   "Confirm deletion?": "Bekreft sletting?",
   "Confirm to delete this custom provider?": "Bekreft sletting av denne egendefinerte tilbyderen?",
   "Confirm?": "Bekreft?",
+  "Connected": "Tilkoblet",
+  "Connection failed": "Tilkobling mislyktes",
   "Connection failed!": "Tilkobling mislyktes!",
+  "Connection successful": "Tilkobling vellykket",
   "Connection successful!": "Tilkobling vellykket!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Tilkobling til {{aiProvider}} mislyktes. Dette skjer vanligvis på grunn av feil konfigurasjon eller {{aiProvider}}-konto problemer. Vennligst <buttonOpenSettings>sørg for at innstillingene dine er riktige</buttonOpenSettings> og bekreft statusen for {{aiProvider}}-kontoen din, eller kjøp en <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> for å låse opp alle avanserte modeller umiddelbart uten noen konfigurasjon.",
   "Content": "Innhold",
@@ -221,6 +226,8 @@
   "display": "visning",
   "Display": "Vis",
   "Display Settings": "Visningsinnstillinger",
+  "Document Parser": "Dokumentparser",
+  "Document parser reset to default due to unverified MinerU token": "Dokumentparser tilbakestilt til standard på grunn av uverifisert MinerU-token",
   "Documents": "Dokumenter",
   "Donate": "Doner",
   "Done": "Ferdig",
@@ -254,6 +261,7 @@
   "Ending with / ignores v1, ending with # forces use of input address": "Som ender med / ignorerer v1, som ender med # tvinger bruk av inndataadressen",
   "Enjoying Chatbox?": "Njuter du av Chatbox?",
   "Enter": "Enter",
+  "Enter your MinerU API token": "Skriv inn din MinerU API-token",
   "Environment Variables": "Miljøvariabler",
   "Error Reporting": "Feilrapportering",
   "Estimated Token Usage": "Estimert Tokenbruk",
@@ -321,6 +329,7 @@
   "Generate More Images Below": "Generer flere bilder nedenfor",
   "Generating summary...": "Genererer sammendrag...",
   "Get API Key": "Få API-nøkkel",
+  "Get API Token": "Hent API-token",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Få bedre kobling og stabilitet med Chatbox-skrivebordsappen. <a>Last ned nå</a>.",
   "Get Files Meta": "Hent Filmeta",
   "Get License": "Få lisens",
@@ -390,6 +399,7 @@
   "Loading more chunks...": "Laster inn flere biter...",
   "Loading webpage...": "Laster nettside...",
   "Loading...": "Laster inn...",
+  "Local": "Lokal",
   "Local (stdio)": "Lokal (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Lokal filbehandling mislyktes. Du kan oppgradere abonnementet ditt for å bruke Chatbox AIs avanserte filbehandlingsfunksjoner.",
   "Local Mode": "Lokal modus",
@@ -423,6 +433,8 @@
   "Message Raw JSON": "Melding Rå JSON",
   "meticulous": "Nøyaktig",
   "MIME Type": "MIME-type",
+  "MinerU API Token": "MinerU API Token",
+  "MinerU parse failed": "MinerU analyse mislyktes",
   "Minimize": "Minimer",
   "Misleading information": "Villedende informasjon",
   "Mobile devices temporarily do not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "Mobile enheter støtter midlertidig ikke lokal parsing av denne filtypen. Vennligst bruk tekstfiler (txt, markdown, osv.) eller bruk <LinkToAdvancedFileProcessing>Chatbox AI Tjeneste</LinkToAdvancedFileProcessing> for skybasert dokumentanalyse.",
@@ -486,6 +498,7 @@
   "OCR Text": "OCR Tekst",
   "OCR Text Content": "OCR Tekstinnhold",
   "One-click MCP servers for Chatbox AI subscribers": "Ett-klikk MCP-servere for Chatbox AI-abonnenter",
+  "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "Støtter kun grunnleggende tekstfiler (.txt, .md, .json, kodefiler, osv.). For PDF- og Office-filer, vennligst bytt til Chatbox AI.",
   "Open": "Åpne",
   "OpenAI API Compatible": "OpenAI API-kompatibel",
   "OpenAI Responses API Compatible": "OpenAI Responser API-kompatibel",
@@ -495,6 +508,9 @@
   "Or become a sponsor": "Eller bli sponsor",
   "Other concerns": "Andre bekymringer",
   "Parse Link": "Tolk lenke",
+  "Parser": "Parser",
+  "Parser Type": "Parsertype",
+  "Parser used to process uploaded documents": "Parser brukt til å behandle opplastede dokumenter",
   "Paste long text as a file": "Lim inn lang tekst som en fil",
   "Pasting long text will automatically insert it as a file, keeping chats clean and reducing token usage with prompt caching.": "Lim inn lang tekst som en fil for å holde samtaler rent og redusere tokenbruk med prompt-cache.",
   "Pause": "Pause",
@@ -508,6 +524,7 @@
   "Please describe the content you want to report (Optional)": "Vennligst beskriv innholdet du ønsker å rapportere (valgfritt)",
   "Please ensure that the Remote LM Studio Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Vennligst sørg for at den eksterne LM Studio-tjenesten kan koble til eksternt. For mer informasjon, se <a>denne veiledningen</a>.",
   "Please ensure that the Remote Ollama Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Vennligst sørg for at den eksterne Ollama-tjenesten kan koble til eksternt. For mer informasjon, se <a>denne veiledningen</a>.",
+  "Please enter an API token": "Vennligst skriv inn en API-token",
   "Please note that as a client tool, Chatbox cannot guarantee the quality of service and data privacy of the model providers. If you are looking for a stable, reliable, and privacy-protecting model service, consider <a>Chatbox AI</a>.": "Vær oppmerksom på at som et klientverktøy kan ikke Chatbox garantere tjenestekvaliteten og personvernet til modelltilbyderne. Hvis du ser etter en stabil, pålitelig og personvernbeskyttende modelltjeneste, vurder <a>Chatbox AI</a>.",
   "Please select a model": "Vennligst velg en modell",
   "Please test before saving": "Vennligst test før lagring",
@@ -670,6 +687,7 @@
   "Terminal": "Terminal",
   "Terms of Service": "Tjenestevilkår",
   "Test": "Test",
+  "Test Connection": "Test tilkobling",
   "Test failed": "Test mislyktes",
   "Test Model": "Testmodell",
   "Test successful": "Test vellykket",
@@ -702,6 +720,7 @@
   "Thinking Budget only works for 3.7 or later models": "Tenkebudsjett fungerer bare for 3.7 eller nyere modeller",
   "Thinking Effort": "Tankearbeid",
   "Thinking Effort only works for OpenAI o-series models": "Tenkeinnsats fungerer bare for OpenAI o-series-modeller",
+  "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Tredjeparts skybasert parser-tjeneste, støtter PDF og de fleste Office-filer. Krever API-token.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Denne handlingen kan ikke angres. Alle dokumenter og deres embeddings vil bli permanent slettet.",
   "This license key has reached the activation limit": "Denne lisensnøkkelen har nådd aktiveringsgrensen",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Denne lisensnøkkelen har nådd aktiveringsgrensen, <a>klikk her</a> for å administrere lisens og enheter for å deaktivere gamle enheter.",
@@ -753,6 +772,7 @@
   "user": "Bruker",
   "User Avatar": "Brukeravatar",
   "User Terms": "Brukervilkår",
+  "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Bruker innebygd dokumentanalysefunksjon, støtter vanlige filtyper. Gratis bruk, ingen beregningspoeng vil forbrukes.",
   "version": "Versjon",
   "Video files are not supported": "Videofiler støttes ikke",
   "View All Copilots": "Vis alle Copilots",
