--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -111,6 +111,7 @@
   "Chatbox AI Image Quota": "Quota de Imagens do Chatbox AI",
   "Chatbox AI License": "Licença Chatbox AI",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "Chatbox AI oferece uma solução de IA fácil de usar para ajudá-lo a aumentar a produtividade",
+  "Chatbox AI parse failed": "A análise do Chatbox AI falhou",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "A Chatbox AI fornece todo o suporte essencial de modelos necessário para o processamento de bases de conhecimento",
   "Chatbox AI Quota": "Chatbox AI Quota",
   "Chatbox AI Standard Model Quota": "Quota do modelo padrão Chatbox AI",
@@ -141,6 +142,7 @@
   "Click to view parsed content": "Clique para ver o conteúdo analisado",
   "close": "Fechar",
   "Close": "Fechar",
+  "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Serviço de análise de documentos baseado na nuvem, suporta ficheiros PDF, Office, EPUB e muitos outros tipos de ficheiro. Consome pontos de computação.",
   "Code Search": "Pesquisa de Código",
   "Collapse": "Colapsar",
   "Coming soon": "Em breve",
@@ -154,7 +156,10 @@
   "Confirm deletion?": "Confirmar exclusão?",
   "Confirm to delete this custom provider?": "Confirmar a eliminação deste fornecedor personalizado?",
   "Confirm?": "Confirmar?",
+  "Connected": "Ligado",
+  "Connection failed": "Ligação falhada",
   "Connection failed!": "Conexão falhou!",
+  "Connection successful": "Conexão bem-sucedida",
   "Connection successful!": "Conexão bem-sucedida!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "A conexão com {{aiProvider}} falhou. Isso geralmente ocorre devido a configurações incorretas ou problemas de conta {{aiProvider}}. Por favor, <buttonOpenSettings>verifique suas configurações</buttonOpenSettings> e verifique o status de sua conta {{aiProvider}}, ou compre uma <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> para desbloquear todos os modelos avançados instantaneamente sem nenhuma configuração.",
   "Content": "Conteúdo",
@@ -221,6 +226,8 @@
   "display": "Exibir",
   "Display": "Exibir",
   "Display Settings": "Definições de Exibição",
+  "Document Parser": "Analisador de Documentos",
+  "Document parser reset to default due to unverified MinerU token": "Analisador de documentos redefinido para o padrão devido a token MinerU não verificado",
   "Documents": "Documentos",
   "Donate": "Doar",
   "Done": "Concluído",
@@ -253,6 +260,7 @@
   "Ending with / ignores v1, ending with # forces use of input address": "Terminar com / ignora v1, terminar com # força o uso do endereço de entrada",
   "Enjoying Chatbox?": "Gostando do Chatbox?",
   "Enter": "Tecla Enter",
+  "Enter your MinerU API token": "Introduza o seu token de API MinerU",
   "Environment Variables": "Variáveis de Ambiente",
   "Error Reporting": "Relatório de Erros",
   "Estimated Token Usage": "Utilização Estimada de Tokens",
@@ -320,6 +328,7 @@
   "Generate More Images Below": "Gerar Mais Imagens Abaixo",
   "Generating summary...": "A gerar resumo...",
   "Get API Key": "Obter Chave API",
+  "Get API Token": "Obter Token da API",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Obtenha uma melhor conectividade e estabilidade com a aplicação Chatbox para desktop. <a>Baixe agora</a>.",
   "Get Files Meta": "Obter Metadados de Ficheiros",
   "Get License": "Obter Licença",
@@ -389,6 +398,7 @@
   "Loading more chunks...": "A carregar mais blocos...",
   "Loading webpage...": "Carregando página web...",
   "Loading...": "A carregar...",
+  "Local": "Local",
   "Local (stdio)": "Local (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "O processamento de ficheiros local falhou. Pode atualizar o seu plano para usar as capacidades avançadas de processamento de ficheiros do Chatbox AI.",
   "Local Mode": "Modo Local",
@@ -422,6 +432,8 @@
   "Message Raw JSON": "JSON Bruto da Mensagem",
   "meticulous": "Meticuloso",
   "MIME Type": "Tipo MIME",
+  "MinerU API Token": "Token da API MinerU",
+  "MinerU parse failed": "Falha na análise do MinerU",
   "Minimize": "Minimizar",
   "Misleading information": "Informação enganosa",
   "Mobile devices temporarily do not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "Dispositivos móveis temporariamente não suportam a análise local deste tipo de ficheiro. Por favor, utilize ficheiros de texto (txt, markdown, etc.) ou utilize <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> para análise de documentos baseada na nuvem.",
@@ -485,6 +497,7 @@
   "OCR Text": "Texto OCR",
   "OCR Text Content": "Conteúdo do Texto OCR",
   "One-click MCP servers for Chatbox AI subscribers": "Servidores MCP de um clique para subscritores do Chatbox AI",
+  "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "Apenas suporta ficheiros de texto básicos (.txt, .md, .json, ficheiros de código, etc.). Para ficheiros PDF e Office, por favor, mude para o Chatbox AI.",
   "Open": "Abrir",
   "OpenAI API Compatible": "Compatível com API OpenAI",
   "OpenAI Responses API Compatible": "OpenAI Respostas API Compatível",
@@ -494,6 +507,9 @@
   "Or become a sponsor": "Ou torne-se um patrocinador",
   "Other concerns": "Outros problemas",
   "Parse Link": "Analisar Ligação",
+  "Parser": "Analisador",
+  "Parser Type": "Tipo de Analisador",
+  "Parser used to process uploaded documents": "Analisador usado para processar documentos carregados",
   "Paste long text as a file": "Colar texto longo como um ficheiro",
   "Pasting long text will automatically insert it as a file, keeping chats clean and reducing token usage with prompt caching.": "Colar texto longo como um ficheiro para manter as conversas limpas e reduzir o uso de tokens com cache de prompt.",
   "Pause": "Pausa",
@@ -507,6 +523,7 @@
   "Please describe the content you want to report (Optional)": "Por favor, descreva o conteúdo que deseja reportar (opcional)",
   "Please ensure that the Remote LM Studio Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Por favor, certifique-se de que o Serviço Remoto LM Studio pode se conectar remotamente. Para mais detalhes, consulte <a>este tutorial</a>.",
   "Please ensure that the Remote Ollama Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Por favor, certifique-se de que o Serviço Remoto Ollama consegue conectar-se remotamente. Para mais detalhes, consulte <a>este tutorial</a>.",
+  "Please enter an API token": "Por favor, introduza um token da API",
   "Please note that as a client tool, Chatbox cannot guarantee the quality of service and data privacy of the model providers. If you are looking for a stable, reliable, and privacy-protecting model service, consider <a>Chatbox AI</a>.": "Por favor, note que, como uma ferramenta cliente, o Chatbox não pode garantir a qualidade do serviço e a privacidade dos dados dos fornecedores de modelos. Se você está procurando um serviço de modelo estável, confiável e que proteja a privacidade, considere <a>Chatbox AI</a>.",
   "Please select a model": "Por favor, selecione um modelo",
   "Please test before saving": "Por favor, teste antes de guardar",
@@ -669,6 +686,7 @@
   "Terminal": "Terminal",
   "Terms of Service": "Termos de Serviço",
   "Test": "Teste",
+  "Test Connection": "Testar Ligação",
   "Test failed": "Teste falhou",
   "Test Model": "Modelo de Teste",
   "Test successful": "Teste bem-sucedido",
@@ -701,6 +719,7 @@
   "Thinking Budget only works for 3.7 or later models": "Orçamento de Pensamento só funciona para 3.7 ou modelos posteriores",
   "Thinking Effort": "Esforço de Pensamento",
   "Thinking Effort only works for OpenAI o-series models": "Esforço de Pensamento só funciona para os modelos OpenAI da série o.",
+  "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Serviço de análise na nuvem de terceiros, suporta PDF e a maioria dos ficheiros do Office. Requer um token de API.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Esta ação não pode ser desfeita. Todos os documentos e os seus embeddings serão permanentemente eliminados.",
   "This license key has reached the activation limit": "Esta chave de licença atingiu o limite de ativação",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Esta chave de licença atingiu o limite de ativação, <a>clique aqui</a> para gerir a licença e os dispositivos para desativar dispositivos antigos.",
@@ -752,6 +771,7 @@
   "user": "Utilizador",
   "User Avatar": "Avatar do Utilizador",
   "User Terms": "Termos de Utilizador",
+  "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Utiliza a funcionalidade de análise de documentos integrada, suporta tipos de ficheiro comuns. Utilização gratuita, não serão consumidos pontos de computação.",
   "version": "Versão",
   "Video files are not supported": "Ficheiros de vídeo não são suportados",
   "View All Copilots": "Ver Todos os Copilotos",
