--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -111,6 +111,7 @@
   "Chatbox AI Image Quota": "Квота на изображения Chatbox AI",
   "Chatbox AI License": "Лицензия Chatbox AI",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "Chatbox AI предлагает простое в использовании решение на основе искусственного интеллекта, которое помогает повысить производительность",
+  "Chatbox AI parse failed": "Chatbox AI: сбой синтаксического анализа",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "Chatbox AI предоставляет всю необходимую поддержку моделей, необходимую для обработки баз знаний",
   "Chatbox AI Quota": "Chatbox AI Квота",
   "Chatbox AI Standard Model Quota": "Квота стандартной модели Chatbox AI",
@@ -141,6 +142,7 @@
   "Click to view parsed content": "Нажмите, чтобы просмотреть разобранное содержимое",
   "close": "Закрыть",
   "Close": "Закрыть",
+  "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Облачный сервис анализа документов, поддерживает файлы PDF, Office, EPUB и многие другие типы файлов. Потребляет вычислительные баллы.",
   "Code Search": "Поиск кода",
   "Collapse": "Свернуть",
   "Coming soon": "Скоро будет",
@@ -154,7 +156,10 @@
   "Confirm deletion?": "Подтвердить удаление?",
   "Confirm to delete this custom provider?": "Подтвердите удаление этого пользовательского поставщика?",
   "Confirm?": "Подтвердить?",
+  "Connected": "Подключено",
+  "Connection failed": "Соединение не удалось",
   "Connection failed!": "Ошибка соединения!",
+  "Connection successful": "Соединение успешно",
   "Connection successful!": "Соединение успешно!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Соединение с {{aiProvider}} не удалось. Обычно это происходит из-за неправильной конфигурации или проблем с аккаунтом {{aiProvider}}. Пожалуйста, <buttonOpenSettings>проверьте ваши настройки</buttonOpenSettings> и проверьте статус вашего аккаунта {{aiProvider}}, или приобретите <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>, чтобы мгновенно разблокировать все расширенные модели без какой-либо конфигурации.",
   "Content": "Содержимое",
@@ -221,6 +226,8 @@
   "display": "дисплей",
   "Display": "Отображение",
   "Display Settings": "Настройки отображения",
+  "Document Parser": "Парсер документов",
+  "Document parser reset to default due to unverified MinerU token": "Парсер документов сброшен к настройкам по умолчанию из-за непроверенного токена MinerU",
   "Documents": "Документы",
   "Donate": "Пожертвовать",
   "Done": "Готово",
@@ -254,6 +261,7 @@
   "Ending with / ignores v1, ending with # forces use of input address": "Об окончании на / игнорируется v1; окончание на # заставляет использовать введенный адрес",
   "Enjoying Chatbox?": "Приятно ли использовать Chatbox?",
   "Enter": "Ввод",
+  "Enter your MinerU API token": "Введите ваш MinerU API-токен",
   "Environment Variables": "Переменные среды",
   "Error Reporting": "Отчеты об ошибках",
   "Estimated Token Usage": "Примерный расход токенов",
@@ -321,6 +329,7 @@
   "Generate More Images Below": "Создать больше изображений ниже",
   "Generating summary...": "Генерирование сводки...",
   "Get API Key": "Получить API ключ",
+  "Get API Token": "Получить токен API",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Получите лучшую совместимость и стабильность с помощью приложения Chatbox для рабочего стола. <a>Скачать сейчас</a>.",
   "Get Files Meta": "Получить метаданные",
   "Get License": "Получить лицензию",
@@ -390,6 +399,7 @@
   "Loading more chunks...": "Загружаются еще фрагменты...",
   "Loading webpage...": "Загрузка веб-страницы...",
   "Loading...": "Загрузка...",
+  "Local": "Локальный",
   "Local (stdio)": "Локальный (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Не удалось обработать локальный файл. Вы можете обновить свой тарифный план, чтобы использовать расширенные возможности обработки файлов Chatbox AI.",
   "Local Mode": "Локальный режим",
@@ -423,6 +433,8 @@
   "Message Raw JSON": "Исходный JSON сообщения",
   "meticulous": "Тщательный",
   "MIME Type": "MIME-тип",
+  "MinerU API Token": "MinerU API-токен",
+  "MinerU parse failed": "Сбой разбора MinerU",
   "Minimize": "Минимизировать",
   "Misleading information": "Ошибочная информация",
   "Mobile devices temporarily do not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "Мобильные устройства временно не поддерживают локальный анализ этого типа файла. Пожалуйста, используйте текстовые файлы (txt, markdown и т.д.) или используйте <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> для облачного анализа документов.",
@@ -486,6 +498,7 @@
   "OCR Text": "OCR Текст",
   "OCR Text Content": "OCR Текстовое содержимое",
   "One-click MCP servers for Chatbox AI subscribers": "Однокликовые MCP серверы для подписчиков Chatbox AI",
+  "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "Поддерживает только базовые текстовые файлы (.txt, .md, .json, файлы кода и т. д.). Для файлов PDF и Office, пожалуйста, переключитесь на Chatbox AI.",
   "Open": "Открыть",
   "OpenAI API Compatible": "Совместимо с API OpenAI",
   "OpenAI Responses API Compatible": "Совместимый с API ответов OpenAI",
@@ -495,6 +508,9 @@
   "Or become a sponsor": "Или станьте спонсором",
   "Other concerns": "Другие проблемы",
   "Parse Link": "Разобрать ссылку",
+  "Parser": "Парсер",
+  "Parser Type": "Тип парсера",
+  "Parser used to process uploaded documents": "Парсер используется для обработки загруженных документов",
   "Paste long text as a file": "Вставить длинный текст как файл",
   "Pasting long text will automatically insert it as a file, keeping chats clean and reducing token usage with prompt caching.": "Вставление длинного текста в виде файла поможет сохранить чистоту в чат-списке и уменьшить использование токенов с помощью кэширования промптов.",
   "Pause": "Пауза",
@@ -508,6 +524,7 @@
   "Please describe the content you want to report (Optional)": "Пожалуйста, опишите содержимое, которое вы хотите сообщить (необязательно)",
   "Please ensure that the Remote LM Studio Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Пожалуйста, убедитесь, что удаленный сервис LM Studio может подключаться удаленно. Для получения дополнительной информации обратитесь к <a>этому руководству</a>.",
   "Please ensure that the Remote Ollama Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Пожалуйста, убедитесь, что удаленный сервис Ollama может подключаться удаленно. Для получения дополнительной информации обратитесь к <a>этому руководству</a>.",
+  "Please enter an API token": "Пожалуйста, введите API токен",
   "Please note that as a client tool, Chatbox cannot guarantee the quality of service and data privacy of the model providers. If you are looking for a stable, reliable, and privacy-protecting model service, consider <a>Chatbox AI</a>.": "Обратите внимание, что в качестве клиентского инструмента Chatbox не может гарантировать качество обслуживания и конфиденциальность данных поставщиков моделей. Если вы ищете стабильный, надежный и защищающий конфиденциальность сервис моделей, рассмотрите <a>Chatbox AI</a>.",
   "Please select a model": "Пожалуйста, выберите модель",
   "Please test before saving": "Пожалуйста, проверьте перед сохранением",
@@ -671,6 +688,7 @@
   "Terminal": "Терминал",
   "Terms of Service": "Условия обслуживания",
   "Test": "Тест",
+  "Test Connection": "Проверить соединение",
   "Test failed": "Тест провален",
   "Test Model": "Тестовая модель",
   "Test successful": "Тест успешно",
@@ -703,6 +721,7 @@
   "Thinking Budget only works for 3.7 or later models": "Бюджет мышления работает только с моделями 3.7 или новее",
   "Thinking Effort": "Мыслительное усилие",
   "Thinking Effort only works for OpenAI o-series models": "Усилие мышления работает только для моделей OpenAI o-серии",
+  "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Сторонний облачный сервис анализа, поддерживает PDF и большинство файлов Office. Требуется токен API.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Это действие нельзя отменить. Все документы и их эмбеддинги будут безвозвратно удалены.",
   "This license key has reached the activation limit": "Этот ключ лицензии достиг лимита активации",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Этот ключ лицензии достиг лимита активации, <a>нажмите здесь</a>, чтобы управлять лицензией и устройствами для деактивации старых устройств.",
@@ -754,6 +773,7 @@
   "user": "Пользователь",
   "User Avatar": "Аватар пользователя",
   "User Terms": "Условия использования",
+  "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Использует встроенную функцию анализа документов, поддерживает распространенные типы файлов. Бесплатное использование, вычислительные баллы не расходуются.",
   "version": "Версия",
   "Video files are not supported": "Видеофайлы не поддерживаются",
   "View All Copilots": "Просмотреть всех Copilots",
