--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -111,6 +111,7 @@
   "Chatbox AI Image Quota": "Chatbox AI bildkvot",
   "Chatbox AI License": "Chatbox AI-licens",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "Chatbox AI erbjuder en användarvänlig AI-lösning för att hjälpa dig öka produktiviteten",
+  "Chatbox AI parse failed": "Chatbox AI tolkning misslyckades",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "Chatbox AI tillhandahåller allt nödvändigt modellstöd som krävs för kunskapsbasbearbetning",
   "Chatbox AI Quota": "Chatbox AI Kvot",
   "Chatbox AI Standard Model Quota": "Kvot för Chatbox AI standardmodell",
@@ -141,6 +142,7 @@
   "Click to view parsed content": "Klicka för att visa analyserat innehåll",
   "close": "Stäng",
   "Close": "Stäng",
+  "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Molnbaserad dokumentanalystjänst, stöder PDF, Office-filer, EPUB och många andra filtyper. Förbrukar beräkningspoäng.",
   "Code Search": "Kodsökning",
   "Collapse": "Minimera",
   "Coming soon": "Kommer snart",
@@ -154,7 +156,10 @@
   "Confirm deletion?": "Bekräfta radering?",
   "Confirm to delete this custom provider?": "Bekräfta att du vill radera denna anpassade leverantör?",
   "Confirm?": "Bekräfta?",
+  "Connected": "Ansluten",
+  "Connection failed": "Anslutningen misslyckades",
   "Connection failed!": "Anslutning misslyckades!",
+  "Connection successful": "Anslutningen lyckades",
   "Connection successful!": "Anslutning lyckades!",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Anslutningen till {{aiProvider}} misslyckades. Detta inträffar vanligtvis på grund av felaktig konfiguration eller {{aiProvider}}-kontoproblem. Vänligen <buttonOpenSettings>kontrollera dina inställningar</buttonOpenSettings> och verifiera ditt {{aiProvider}}-kontostatus, eller köp en <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> för att låsa upp alla avancerade modeller omedelbart utan någon konfiguration.",
   "Content": "Innehåll",
@@ -221,6 +226,8 @@
   "display": "visa",
   "Display": "Visa",
   "Display Settings": "Skärminställningar",
+  "Document Parser": "Dokumentparser",
+  "Document parser reset to default due to unverified MinerU token": "Dokumentparsern har återställts till standard på grund av en overifierad MinerU-token",
   "Documents": "Dokument",
   "Donate": "Donera",
   "Done": "Klar",
@@ -254,6 +261,7 @@
   "Ending with / ignores v1, ending with # forces use of input address": "Att avsluta med / ignorerar v1, att avsluta med # tvingar användning av inmatningsadress",
   "Enjoying Chatbox?": "Njuter du av Chatbox?",
   "Enter": "Enter",
+  "Enter your MinerU API token": "Ange din MinerU API token",
   "Environment Variables": "Miljövariabler",
   "Error Reporting": "Felrapportering",
   "Estimated Token Usage": "Beräknad tokenanvändning",
@@ -321,6 +329,7 @@
   "Generate More Images Below": "Generera fler bilder nedan",
   "Generating summary...": "Genererar sammanfattning...",
   "Get API Key": "Hämta API-nyckel",
+  "Get API Token": "Hämta API Token",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Få bättre anslutning och stabilitet med Chatbox-skrivbordsappen. <a>Ladda ner nu</a>.",
   "Get Files Meta": "Hämta Filmetadata",
   "Get License": "Skaffa licens",
@@ -390,6 +399,7 @@
   "Loading more chunks...": "Laddar fler bitar...",
   "Loading webpage...": "Laddar webbsida...",
   "Loading...": "Laddar...",
+  "Local": "Lokal",
   "Local (stdio)": "Lokal (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Lokal filbearbetning misslyckades. Du kan uppgradera din plan för att använda Chatbox AI:s avancerade filbearbetningsfunktioner.",
   "Local Mode": "Lokalt läge",
@@ -423,6 +433,8 @@
   "Message Raw JSON": "Meddelandets råa JSON",
   "meticulous": "Noggrann",
   "MIME Type": "MIME-typ",
+  "MinerU API Token": "MinerU API Token",
+  "MinerU parse failed": "MinerU-tolkning misslyckades",
   "Minimize": "Minimera",
   "Misleading information": "Vilseledande information",
   "Mobile devices temporarily do not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "Mobila enheter stöder tillfälligt inte lokal parsning av den här filtypen. Använd textfiler (txt, markdown, etc.) eller använd <LinkToAdvancedFileProcessing>Chatbox AI-tjänst</LinkToAdvancedFileProcessing> för molnbaserad dokumentanalys.",
@@ -486,6 +498,7 @@
   "OCR Text": "OCR-text",
   "OCR Text Content": "OCR Textinnehåll",
   "One-click MCP servers for Chatbox AI subscribers": "Enkelklick MCP-servrar för Chatbox AI-prenumeranter",
+  "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "Stöder endast grundläggande textfiler (.txt, .md, .json, kodfiler, etc.). För PDF- och Office-filer, vänligen byt till Chatbox AI.",
   "Open": "Öppna",
   "OpenAI API Compatible": "OpenAI API-kompatibel",
   "OpenAI Responses API Compatible": "OpenAI Svar API-kompatibel",
@@ -495,6 +508,9 @@
   "Or become a sponsor": "Eller bli sponsor",
   "Other concerns": "Övriga problem",
   "Parse Link": "Analysera länk",
+  "Parser": "Parser",
+  "Parser Type": "Parsertyp",
+  "Parser used to process uploaded documents": "Parser som används för att bearbeta uppladdade dokument",
   "Paste long text as a file": "Klistra in lång text som en fil",
   "Pasting long text will automatically insert it as a file, keeping chats clean and reducing token usage with prompt caching.": "Klistra in lång text som en fil för att hålla chattlistan ren och minska tokenanvändningen med prompt-cache.",
   "Pause": "Pausa",
@@ -508,6 +524,7 @@
   "Please describe the content you want to report (Optional)": "Beskriv innehållet du vill rapportera (Valfritt)",
   "Please ensure that the Remote LM Studio Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Se till att fjärr-LM Studio-tjänsten kan ansluta på distans. För mer information, se <a>denna guide</a>.",
   "Please ensure that the Remote Ollama Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Se till att fjärr-Ollama-tjänsten kan ansluta på distans. För mer information, se <a>denna guide</a>.",
+  "Please enter an API token": "Ange en API-token",
   "Please note that as a client tool, Chatbox cannot guarantee the quality of service and data privacy of the model providers. If you are looking for a stable, reliable, and privacy-protecting model service, consider <a>Chatbox AI</a>.": "Observera att Chatbox som klientverktyg inte kan garantera tjänstekvaliteten och dataskyddet hos modellleverantörerna. Om du söker en stabil, pålitlig och integritetsskyddande modelltjänst, överväg <a>Chatbox AI</a>.",
   "Please select a model": "Välj en modell",
   "Please test before saving": "Testa innan du sparar",
@@ -670,6 +687,7 @@
   "Terminal": "Terminal",
   "Terms of Service": "Användarvillkor",
   "Test": "Test",
+  "Test Connection": "Testa anslutning",
   "Test failed": "Testet misslyckades",
   "Test Model": "Testmodell",
   "Test successful": "Test lyckades",
@@ -702,6 +720,7 @@
   "Thinking Budget only works for 3.7 or later models": "Thinking Budget fungerar endast för 3.7 eller senare modeller",
   "Thinking Effort": "Tänkande Ansträngning",
   "Thinking Effort only works for OpenAI o-series models": "Tankeansträngning fungerar endast för OpenAI o-seriens modeller",
+  "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Tredjeparts molnbaserad parsningstjänst, stöder PDF och de flesta Office-filer. Kräver API-token.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Denna åtgärd kan inte ångras. Alla dokument och deras inbäddningar kommer att raderas permanent.",
   "This license key has reached the activation limit": "Denna licensnyckel har nått aktiveringsgränsen",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Denna licensnyckel har nått aktiveringsgränsen, <a>klicka här</a> för att hantera licens och enheter för att inaktivera gamla enheter.",
@@ -754,6 +773,7 @@
   "user": "Användare",
   "User Avatar": "Användaravatar",
   "User Terms": "Användarvillkor",
+  "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Använder inbyggd dokumentparserfunktion, stöder vanliga filtyper. Gratis användning, inga beräkningspoäng förbrukas.",
   "version": "Version",
   "Video files are not supported": "Videofiler stöds inte",
   "View All Copilots": "Visa alla Copilots",
