--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -111,6 +111,7 @@
   "Chatbox AI Image Quota": "Chatbox AI 图片剩余额度",
   "Chatbox AI License": "Chatbox AI 许可证",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "Chatbox AI 旨在让更多人享受AI带来的工作效率提升，你只需按照成本价支付背后的模型成本费用",
+  "Chatbox AI parse failed": "Chatbox AI 解析失败",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "Chatbox AI 提供知识库处理所需的所有基本模型支持",
   "Chatbox AI Quota": "Chatbox AI 配额",
   "Chatbox AI Standard Model Quota": "Chatbox AI 标准模型配额",
@@ -141,6 +142,7 @@
   "Click to view parsed content": "点击查看解析内容",
   "close": "关闭",
   "Close": "关闭",
+  "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "基于Chatbox AI的文档解析服务，支持 PDF、Office 文件、EPUB 和许多其他文件类型。消耗计算点数。",
   "Code Search": "代码搜索",
   "Collapse": "折叠",
   "Coming soon": "敬请期待",
@@ -154,7 +156,10 @@
   "Confirm deletion?": "确认删除？",
   "Confirm to delete this custom provider?": "确认删除此自定义模型提供方？",
   "Confirm?": "确认吗？",
+  "Connected": "已连接",
+  "Connection failed": "连接失败",
   "Connection failed!": "连接失败！",
+  "Connection successful": "连接成功",
   "Connection successful!": "连接成功！",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "连接 {{aiProvider}} 失败。这通常是由于配置错误或 {{aiProvider}} 账户问题。请<buttonOpenSettings>检查您的设置</buttonOpenSettings>并验证您的 {{aiProvider}} 账户状态，或购买<LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>即可立即解锁所有高级模型，无需任何配置。",
   "Content": "内容",
@@ -221,6 +226,8 @@
   "display": "显示",
   "Display": "显示",
   "Display Settings": "显示设置",
+  "Document Parser": "文档解析器",
+  "Document parser reset to default due to unverified MinerU token": "文档解析器因 MinerU token 未验证已恢复默认设置。",
   "Documents": "文档",
   "Donate": "捐赠",
   "Done": "完成",
@@ -254,6 +261,7 @@
   "Ending with / ignores v1, ending with # forces use of input address": "以 / 结尾会忽略 v1，以 # 结尾强制使用输入地址",
   "Enjoying Chatbox?": "喜欢 Chatbox 吗？",
   "Enter": "回车键",
+  "Enter your MinerU API token": "输入您的 MinerU API token",
   "Environment Variables": "环境变量",
   "Error Reporting": "错误报告",
   "Estimated Token Usage": "Token 使用量估算",
@@ -321,6 +329,7 @@
   "Generate More Images Below": "在下方生成更多图片",
   "Generating summary...": "正在生成摘要...",
   "Get API Key": "获取 API 密钥",
+  "Get API Token": "获取 API Token",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "使用 Chatbox 桌面版获得更好的连接性和稳定性。<a>立即下载</a>。",
   "Get Files Meta": "获取文件元数据",
   "Get License": "获取License",
@@ -390,6 +399,7 @@
   "Loading more chunks...": "正在加载更多分块...",
   "Loading webpage...": "加载网页中...",
   "Loading...": "加载中...",
+  "Local": "内置解析",
   "Local (stdio)": "本地 (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "本地文件处理失败。您可以升级您的套餐以使用 Chatbox AI 的高级文件处理功能。",
   "Local Mode": "本地模式",
@@ -423,6 +433,8 @@
   "Message Raw JSON": "消息原始 JSON",
   "meticulous": "严谨细致",
   "MIME Type": "MIME 类型",
+  "MinerU API Token": "MinerU API 密钥",
+  "MinerU parse failed": "MinerU 解析失败",
   "Minimize": "最小化",
   "Misleading information": "误导信息",
   "Mobile devices temporarily do not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "移动设备暂时不支持本地解析此文件类型。请使用文本文件（txt、markdown等）或使用<LinkToAdvancedFileProcessing>Chatbox AI 服务</LinkToAdvancedFileProcessing>进行云端文档分析。",
@@ -486,6 +498,7 @@
   "OCR Text": "OCR 文本",
   "OCR Text Content": "OCR 文本内容",
   "One-click MCP servers for Chatbox AI subscribers": "Chatbox AI 订阅者的一键 MCP 服务器",
+  "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "仅支持基本文本文件（.txt、.md、.json、代码文件等）。对于 PDF 和 Office 文件，请切换至 Chatbox AI。",
   "Open": "打开",
   "openai": "经典API调用方式，更好的兼容性，适用于大多数GPT模型",
   "OpenAI (Responses API)": "OpenAI（Responses API）",
@@ -500,6 +513,9 @@
   "Or become a sponsor": "或成为赞助商",
   "Other concerns": "其他问题",
   "Parse Link": "解析链接",
+  "Parser": "解析器",
+  "Parser Type": "解析器类型",
+  "Parser used to process uploaded documents": "用于处理上传文档的解析器",
   "Paste long text as a file": "粘贴长文本为文件",
   "Pasting long text will automatically insert it as a file, keeping chats clean and reducing token usage with prompt caching.": "粘贴长文本时将以文件形式插入，有助于保持聊天列表简洁，并减少在 prompt caching 可用时大幅减少 token 使用量。",
   "Pause": "暂停",
@@ -513,6 +529,7 @@
   "Please describe the content you want to report (Optional)": "请描述您想要举报的内容（可选）",
   "Please ensure that the Remote LM Studio Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "请确保远程 LM Studio 服务能够远程连接。更多详情请参考<a>此教程</a>。",
   "Please ensure that the Remote Ollama Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "请确保远程 Ollama 服务能够远程连接。更多详情请参考<a>此教程</a>。",
+  "Please enter an API token": "请输入 API 令牌",
   "Please note that as a client tool, Chatbox cannot guarantee the quality of service and data privacy of the model providers. If you are looking for a stable, reliable, and privacy-protecting model service, consider <a>Chatbox AI</a>.": "请注意，作为客户端工具，Chatbox 无法保证模型提供方的服务质量和数据隐私。如果您正在寻找一个稳定、可靠、并且保护隐私的模型服务，请考虑<a>Chatbox AI</a>。",
   "Please select a model": "请选择模型",
   "Please test before saving": "保存前请测试",
@@ -678,6 +695,7 @@
   "Terminal": "终端",
   "Terms of Service": "服务条款",
   "Test": "测试",
+  "Test Connection": "测试连接",
   "Test failed": "测试失败",
   "Test Model": "测试模型",
   "Test Results": "测试结果",
@@ -712,6 +730,7 @@
   "Thinking Budget only works for 3.7 or later models": "思考预算仅适用于 3.7 或更高版本模型",
   "Thinking Effort": "思考程度",
   "Thinking Effort only works for OpenAI o-series models": "思考仅适用于 OpenAI o 系列模型",
+  "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "第三方云解析服务，支持 PDF 和大多数 Office 文件。需要 API token。",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "此操作无法撤销。所有文档及其嵌入将被永久删除。",
   "This license key has reached the activation limit": "此 license key 已达到激活上限",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "此 license 已达到激活上限，<a>点击这里</a>管理 license 与设备来取消激活旧设备。",
@@ -765,6 +784,7 @@
   "user": "用户",
   "User Avatar": "用户头像",
   "User Terms": "用户条款",
+  "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "使用内置文档解析功能，支持常见文件类型。免费使用，不消耗计算点数。",
   "version": "版本",
   "Video files are not supported": "视频文件不支持",
   "View All Copilots": "查看所有搭档",
