--- a/src/renderer/i18n/locales/fr/translation.json
+++ b/src/renderer/i18n/locales/fr/translation.json
@@ -111,6 +111,7 @@
   "Chatbox AI Image Quota": "Quota d'Images Chatbox AI",
   "Chatbox AI License": "Licence Chatbox AI",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "Chatbox AI propose une solution d'IA conviviale pour vous aider à améliorer votre productivité",
+  "Chatbox AI parse failed": "Échec de l'analyse Chatbox AI",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "Chatbox AI fournit tout le support de modèle nécessaire au traitement de la base de connaissances",
   "Chatbox AI Quota": "Chatbox AI Quota",
   "Chatbox AI Standard Model Quota": "Quota du modèle standard Chatbox AI",
@@ -141,6 +142,7 @@
   "Click to view parsed content": "Cliquer pour voir le contenu analysé",
   "close": "Fermer",
   "Close": "Fermer",
+  "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Service d'analyse de documents basé sur le cloud, prend en charge les fichiers PDF, Office, EPUB et de nombreux autres types de fichiers. Consomme des points de calcul.",
   "Code Search": "Recherche de code",
   "Collapse": "Réduire",
   "Coming soon": "Bientôt disponible",
@@ -154,7 +156,10 @@
   "Confirm deletion?": "Confirmer la suppression?",
   "Confirm to delete this custom provider?": "Confirmer la suppression de ce fournisseur personnalisé ?",
   "Confirm?": "Confirmer?",
+  "Connected": "Connecté",
+  "Connection failed": "Échec de la connexion",
   "Connection failed!": "Échec de la connexion !",
+  "Connection successful": "Connexion réussie",
   "Connection successful!": "Connexion réussie !",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "La connexion à {{aiProvider}} a échoué. Cela se produit généralement en raison d'une configuration incorrecte ou de problèmes de compte {{aiProvider}}. Veuillez <buttonOpenSettings>vérifier vos paramètres</buttonOpenSettings> et vérifier le statut de votre compte {{aiProvider}}, ou achetez une <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> pour débloquer instantanément tous les modèles avancés sans aucune configuration.",
   "Content": "Contenu",
@@ -221,6 +226,8 @@
   "display": "affichage",
   "Display": "Affichage",
   "Display Settings": "Paramètres d'affichage",
+  "Document Parser": "Analyseur de documents",
+  "Document parser reset to default due to unverified MinerU token": "Analyseur de document réinitialisé par défaut en raison d'un jeton MinerU non vérifié",
   "Documents": "Documents",
   "Donate": "Faire un don",
   "Done": "Terminé",
@@ -254,6 +261,7 @@
   "Ending with / ignores v1, ending with # forces use of input address": "Se terminant par / ignore v1, se terminant par # force l'utilisation de l'adresse d'entrée",
   "Enjoying Chatbox?": "Vous aimez Chatbox?",
   "Enter": "Entrée",
+  "Enter your MinerU API token": "Entrez votre jeton API MinerU",
   "Environment Variables": "Variables d'environnement",
   "Error Reporting": "Signalement d'erreurs",
   "Estimated Token Usage": "Utilisation estimée des jetons",
@@ -321,6 +329,7 @@
   "Generate More Images Below": "Générez plus d'images ci-dessous",
   "Generating summary...": "Génération du résumé...",
   "Get API Key": "Obtenir une clé API",
+  "Get API Token": "Obtenir un jeton API",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "Obtenez une meilleure connectivité et une stabilité avec l'application Chatbox pour bureau. <a>Télécharger maintenant</a>.",
   "Get Files Meta": "Obtenir les métas des fichiers",
   "Get License": "Obtenir une licence",
@@ -390,6 +399,7 @@
   "Loading more chunks...": "Chargement de plus de fragments...",
   "Loading webpage...": "Chargement de la page web...",
   "Loading...": "Chargement...",
+  "Local": "Local",
   "Local (stdio)": "Local (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Échec du traitement du fichier local. Vous pouvez mettre à niveau votre forfait pour utiliser les capacités avancées de traitement de fichiers de Chatbox AI.",
   "Local Mode": "Mode Local",
@@ -423,6 +433,8 @@
   "Message Raw JSON": "JSON Brut du Message",
   "meticulous": "Méticuleux",
   "MIME Type": "Type MIME",
+  "MinerU API Token": "MinerU API Token",
+  "MinerU parse failed": "Échec de l'analyse MinerU",
   "Minimize": "Minimiser",
   "Misleading information": "Informations trompeuses",
   "Mobile devices temporarily do not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "Les appareils mobiles ne prennent temporairement pas en charge l'analyse locale de ce type de fichier. Veuillez utiliser des fichiers texte (txt, markdown, etc.) ou utiliser <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> pour l'analyse de documents basée sur le cloud.",
@@ -486,6 +498,7 @@
   "OCR Text": "Texte OCR",
   "OCR Text Content": "Contenu textuel OCR",
   "One-click MCP servers for Chatbox AI subscribers": "Serveurs MCP en un clic pour les abonnés Chatbox AI",
+  "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "Ne prend en charge que les fichiers texte de base (.txt, .md, .json, fichiers de code, etc.). Pour les fichiers PDF et Office, veuillez passer à Chatbox AI.",
   "Open": "Ouvrir",
   "OpenAI API Compatible": "Compatible avec l'API OpenAI",
   "OpenAI Responses API Compatible": "Compatible avec l'API de Réponses OpenAI",
@@ -495,6 +508,9 @@
   "Or become a sponsor": "Ou devenez un sponsor",
   "Other concerns": "Autres préoccupations",
   "Parse Link": "Analyser le lien",
+  "Parser": "THOUGHT: The user wants to translate the word \"Parser\" from English to French. This is a technical term used in the context of software and data processing.\n\nThe most direct and commonly used translation for \"parser\" in French, especially in a technical context, is \"analyseur\".Analyseur",
+  "Parser Type": "Type d'analyseur",
+  "Parser used to process uploaded documents": "Parseur utilisé pour traiter les documents téléchargés",
   "Paste long text as a file": "Coller un long texte comme un fichier",
   "Pasting long text will automatically insert it as a file, keeping chats clean and reducing token usage with prompt caching.": "Coller un long texte comme un fichier pour maintenir les conversations propres et réduire l'utilisation des tokens avec le cache de prompt.",
   "Pause": "Pause",
@@ -508,6 +524,7 @@
   "Please describe the content you want to report (Optional)": "Veuillez décrire le contenu que vous souhaitez signaler (optionnel)",
   "Please ensure that the Remote LM Studio Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Veuillez vous assurer que le Service LM Studio distant peut se connecter à distance. Pour plus de détails, consultez <a>ce tutoriel</a>.",
   "Please ensure that the Remote Ollama Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "Veuillez vous assurer que le service Ollama distant peut se connecter à distance. Pour plus de détails, consultez <a>ce tutoriel</a>.",
+  "Please enter an API token": "Veuillez saisir un jeton API",
   "Please note that as a client tool, Chatbox cannot guarantee the quality of service and data privacy of the model providers. If you are looking for a stable, reliable, and privacy-protecting model service, consider <a>Chatbox AI</a>.": "Veuillez noter qu'en tant qu'outil client, Chatbox ne peut garantir la qualité du service et la confidentialité des données des fournisseurs de modèles. Si vous recherchez un service de modèle stable, fiable et respectueux de la vie privée, envisagez <a>Chatbox AI</a>.",
   "Please select a model": "Veuillez sélectionner un modèle",
   "Please test before saving": "Veuillez tester avant d'enregistrer.",
@@ -671,6 +688,7 @@
   "Terminal": "Terminal",
   "Terms of Service": "Conditions d'utilisation",
   "Test": "Test",
+  "Test Connection": "Tester la connexion",
   "Test failed": "Test échoué",
   "Test Model": "Modèle de test",
   "Test successful": "Test réussi",
@@ -703,6 +721,7 @@
   "Thinking Budget only works for 3.7 or later models": "Le Budget de réflexion ne fonctionne que pour les modèles 3.7 ou ultérieurs",
   "Thinking Effort": "Effort de réflexion",
   "Thinking Effort only works for OpenAI o-series models": "L'Effort de réflexion ne fonctionne que pour les modèles OpenAI de la série o.",
+  "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Service d'analyse cloud tiers, prend en charge les fichiers PDF et la plupart des fichiers Office. Nécessite un jeton d'API.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Cette action est irréversible. Tous les documents et leurs intégrations seront supprimés définitivement.",
   "This license key has reached the activation limit": "Cette clé de licence a atteint la limite d'activation",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Cette clé de licence a atteint la limite d'activation, <a>cliquez ici</a> pour gérer la licence et les appareils pour désactiver les anciens appareils.",
@@ -754,6 +773,7 @@
   "user": "Utilisateur",
   "User Avatar": "Avatar de l'utilisateur",
   "User Terms": "Conditions d'utilisation",
+  "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "Utilise la fonction d'analyse de documents intégrée, prend en charge les types de fichiers courants. Utilisation gratuite, aucun point de calcul ne sera consommé.",
   "version": "Version",
   "Video files are not supported": "Fichiers vidéo non pris en charge",
   "View All Copilots": "Voir tous les copilotes",
