--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -111,6 +111,7 @@
   "Chatbox AI Image Quota": "Chatbox AI 圖片餘額",
   "Chatbox AI License": "Chatbox AI 授權",
   "Chatbox AI offers a user-friendly AI solution to help you enhance productivity": "Chatbox AI 的目標是讓更多人體驗到 AI 帶來的工作效率提升，您只需支付相應的成本價格以應對模型的成本費用",
+  "Chatbox AI parse failed": "Chatbox AI 解析失敗",
   "Chatbox AI provides all the essential model support required for knowledge base processing": "Chatbox AI 提供知識庫處理所需的所有必要模型支援",
   "Chatbox AI Quota": "Chatbox AI 配額",
   "Chatbox AI Standard Model Quota": "Chatbox AI 標準模型配額",
@@ -141,6 +142,7 @@
   "Click to view parsed content": "點擊查看解析內容",
   "close": "關閉",
   "Close": "關閉",
+  "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "雲端文件解析服務，支援 PDF、Office 文件、EPUB 及許多其他檔案類型。消耗運算點數。",
   "Code Search": "程式碼搜尋",
   "Collapse": "收起",
   "Coming soon": "請耐心等待喔",
@@ -154,7 +156,10 @@
   "Confirm deletion?": "確認刪除？",
   "Confirm to delete this custom provider?": "確認刪除此自定義提供者？",
   "Confirm?": "確認嗎？",
+  "Connected": "已連接",
+  "Connection failed": "連線失敗",
   "Connection failed!": "連接失敗！",
+  "Connection successful": "連線成功",
   "Connection successful!": "連接成功！",
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "與 {{aiProvider}} 的連接失敗。這通常是由於配置不正確或 {{aiProvider}} 帳戶問題引起的。請<OpenSettingsButton>檢查您的設置</OpenSettingsButton>並驗證您的 {{aiProvider}} 帳戶狀態，或購買<LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>即可立即解鎖所有高級模型，無需任何配置。",
   "Content": "內容",
@@ -221,6 +226,8 @@
   "display": "顯示",
   "Display": "顯示",
   "Display Settings": "顯示設定",
+  "Document Parser": "文件解析器",
+  "Document parser reset to default due to unverified MinerU token": "文件解析器因 MinerU 令牌未驗證而重設為預設值",
   "Documents": "文件",
   "Donate": "捐贈",
   "Done": "完成",
@@ -254,6 +261,7 @@
   "Ending with / ignores v1, ending with # forces use of input address": "以 / 結尾會忽略 v1，以 # 結尾強制使用輸入地址",
   "Enjoying Chatbox?": "喜歡 Chatbox 嗎？",
   "Enter": "回車",
+  "Enter your MinerU API token": "輸入 MinerU API token",
   "Environment Variables": "環境變數",
   "Error Reporting": "錯誤上報",
   "Estimated Token Usage": "預估 Token 用量",
@@ -321,6 +329,7 @@
   "Generate More Images Below": "於下方生成更多圖片",
   "Generating summary...": "正在產生摘要...",
   "Get API Key": "獲取 API 密鑰",
+  "Get API Token": "取得 API 權杖",
   "Get better connectivity and stability with the Chatbox desktop application. <a>Download now</a>.": "使用 Chatbox 桌面版獲得更好的連接性和穩定性。<a>立即下載</a>。",
   "Get Files Meta": "取得檔案中繼資料",
   "Get License": "获取License",
@@ -390,6 +399,7 @@
   "Loading more chunks...": "載入更多區塊...",
   "Loading webpage...": "加載網頁中...",
   "Loading...": "載入中...",
+  "Local": "本機",
   "Local (stdio)": "本機 (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "本機檔案處理失敗。您可以升級您的方案以使用 Chatbox AI 的進階檔案處理功能。",
   "Local Mode": "本地模式",
@@ -423,6 +433,8 @@
   "Message Raw JSON": "訊息原始 JSON",
   "meticulous": "嚴謹細緻",
   "MIME Type": "MIME 類型",
+  "MinerU API Token": "MinerU API 憑證",
+  "MinerU parse failed": "MinerU 解析失敗",
   "Minimize": "最小化",
   "Misleading information": "誤導信息",
   "Mobile devices temporarily do not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "行動裝置暫時不支援此檔案類型的本機解析。請使用文字檔案 (txt、markdown 等)，或使用 <LinkToAdvancedFileProcessing>Chatbox AI 服務</LinkToAdvancedFileProcessing> 進行雲端文件分析。",
@@ -486,6 +498,7 @@
   "OCR Text": "OCR 文字",
   "OCR Text Content": "OCR 文字內容",
   "One-click MCP servers for Chatbox AI subscribers": "一鍵 MCP 伺服器適用於 Chatbox AI 訂閱者",
+  "Only supports basic text files (.txt, .md, .json, code files, etc.). For PDF and Office files, please switch to Chatbox AI.": "僅支援基本文字檔（例如 .txt、.md、.json、程式碼檔案等）。對於 PDF 和 Office 檔案，請切換至 Chatbox AI。",
   "Open": "開啟",
   "openai": "經典API調用方式，更好的兼容性，適用於大多數GPT模型",
   "OpenAI (Responses API)": "OpenAI（Responses API）",
@@ -500,6 +513,9 @@
   "Or become a sponsor": "或成為贊助商",
   "Other concerns": "其他問題",
   "Parse Link": "解析連結",
+  "Parser": "解析器",
+  "Parser Type": "解析器類型",
+  "Parser used to process uploaded documents": "用於處理上傳文件的解析器",
   "Paste long text as a file": "粘貼長文本為文件",
   "Pasting long text will automatically insert it as a file, keeping chats clean and reducing token usage with prompt caching.": "粘貼長文本時將其作為文件插入，以保持聊天清潔並減少使用提示緩存時的令牌使用量。",
   "Pause": "暫停",
@@ -513,6 +529,7 @@
   "Please describe the content you want to report (Optional)": "請描述您想要舉報的內容（可選）",
   "Please ensure that the Remote LM Studio Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "請確保遠程 LM Studio 服務能夠遠程連接。有關更多詳情，請參閱<a>此教程</a>。",
   "Please ensure that the Remote Ollama Service is able to connect remotely. For more details, refer to <a>this tutorial</a>.": "請確保遠程 Ollama 服務能夠遠程連接。有關更多詳情，請參閱<a>此教程</a>。",
+  "Please enter an API token": "請輸入 API token",
   "Please note that as a client tool, Chatbox cannot guarantee the quality of service and data privacy of the model providers. If you are looking for a stable, reliable, and privacy-protecting model service, consider <a>Chatbox AI</a>.": "請注意，作為客戶端工具，Chatbox 不能保證模型提供方的服務質量和數據隱私。如果您正在尋找穩定、可靠且保護隱私的模型服務，請考慮使用<a>Chatbox AI</a>。",
   "Please select a model": "請選擇模型",
   "Please test before saving": "請先測試再儲存",
@@ -675,6 +692,7 @@
   "Terminal": "終端機",
   "Terms of Service": "服務條款",
   "Test": "測試",
+  "Test Connection": "測試連線",
   "Test failed": "測試失敗",
   "Test Model": "測試模型",
   "Test successful": "測試成功",
@@ -707,6 +725,7 @@
   "Thinking Budget only works for 3.7 or later models": "思考預算僅適用於 3.7 或更新的模型",
   "Thinking Effort": "思考程度",
   "Thinking Effort only works for OpenAI o-series models": "思考程度僅適用於 OpenAI o-series 模型",
+  "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "第三方雲端解析服務，支援 PDF 和大部分 Office 檔案。需要 API 權杖。",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "此動作無法復原。所有文件及其嵌入將被永久刪除。",
   "This license key has reached the activation limit": "此 license key 已達到啟用上限",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "此 license 授權密鑰已達到啟用限制，<a>點擊這裡</a>管理授權與設備以停用舊設備。",
@@ -759,6 +778,7 @@
   "user": "使用者",
   "User Avatar": "使用者頭像",
   "User Terms": "使用者條款",
+  "Uses built-in document parsing feature, supports common file types. Free usage, no compute points will be consumed.": "使用內建文件解析功能，支援常見檔案類型。免費使用，不會消耗計算點數。",
   "version": "版本",
   "Video files are not supported": "不支援影片檔案",
   "View All Copilots": "查看所有搭檔",
